package main

import (
	"context"
	"encoding/json"
	"fmt"
	"io"
	"log"
	"math/rand"
	"net/http"
	"sync"
	"sync/atomic"
	"time"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
	"zephyrvpn/server/internal/models"
	"zephyrvpn/server/internal/pb"
)

var (
	totalRequests   int64
	successRequests int64
	failedRequests  int64
	startTime       time.Time
	
	slotMutex sync.RWMutex
	currentSlots map[string]*SlotInfo // slotID -> SlotInfo
)

// SlotInfo Ğ¸Ğ½Ñ„Ğ¾Ñ€Ğ¼Ğ°Ñ†Ğ¸Ñ Ğ¾ ÑĞ»Ğ¾Ñ‚Ğµ
type SlotInfo struct {
	SlotID      string `json:"slot_id"`
	StartTime   string `json:"start_time"`
	EndTime     string `json:"end_time"`
	CurrentLoad int    `json:"current_load"`
	MaxCapacity int    `json:"max_capacity"`
}

func main() {
	// ĞĞ´Ñ€ĞµÑĞ° ÑĞµÑ€Ğ²ĞµÑ€Ğ¾Ğ²
	grpcAddr := "host.docker.internal:50051"
	httpAddr := "http://host.docker.internal:8080"
	
	fmt.Printf("ğŸ”Œ ĞŸĞ¾Ğ´ĞºĞ»ÑÑ‡ĞµĞ½Ğ¸Ğµ Ğº gRPC ÑĞµÑ€Ğ²ĞµÑ€Ñƒ %s...\n", grpcAddr)
	
	// ĞŸÑ€Ğ¾Ğ±ÑƒĞµĞ¼ Ğ¿Ğ¾Ğ´ĞºĞ»ÑÑ‡Ğ¸Ñ‚ÑŒÑÑ Ñ Ñ‚Ğ°Ğ¹Ğ¼Ğ°ÑƒÑ‚Ğ¾Ğ¼
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()
	
	conn, err := grpc.DialContext(ctx, grpcAddr, 
		grpc.WithTransportCredentials(insecure.NewCredentials()),
		grpc.WithBlock(), // Ğ‘Ğ»Ğ¾ĞºĞ¸Ñ€ÑƒĞµĞ¼ Ğ´Ğ¾ Ğ¿Ğ¾Ğ´ĞºĞ»ÑÑ‡ĞµĞ½Ğ¸Ñ
	)
	if err != nil {
		log.Fatalf("âŒ ĞĞµ ÑƒĞ´Ğ°Ğ»Ğ¾ÑÑŒ Ğ¿Ğ¾Ğ´ĞºĞ»ÑÑ‡Ğ¸Ñ‚ÑŒÑÑ Ğº gRPC ÑĞµÑ€Ğ²ĞµÑ€Ñƒ %s: %v\nğŸ’¡ Ğ£Ğ±ĞµĞ´Ğ¸ÑÑŒ, Ñ‡Ñ‚Ğ¾ ÑĞµÑ€Ğ²ĞµÑ€ Ğ·Ğ°Ğ¿ÑƒÑ‰ĞµĞ½ Ğ¸ ÑĞ»ÑƒÑˆĞ°ĞµÑ‚ Ğ½Ğ° Ğ¿Ğ¾Ñ€Ñ‚Ñƒ 50051", grpcAddr, err)
	}
	defer conn.Close()
	
	// ĞŸÑ€Ğ¾Ğ²ĞµÑ€ÑĞµĞ¼ Ğ¿Ğ¾Ğ´ĞºĞ»ÑÑ‡ĞµĞ½Ğ¸Ğµ Ñ‚ĞµÑÑ‚Ğ¾Ğ²Ñ‹Ğ¼ Ğ·Ğ°Ğ¿Ñ€Ğ¾ÑĞ¾Ğ¼
	client := pb.NewOrderServiceClient(conn)
	testCtx, testCancel := context.WithTimeout(context.Background(), 2*time.Second)
	defer testCancel()
	
	_, testErr := client.CreateOrder(testCtx, &pb.PizzaOrderRequest{
		CustomerId: 0,
		PizzaName:  "test",
		Quantity:   1,
	})
	if testErr != nil && testErr.Error() != "rpc error: code = Unavailable" {
		fmt.Println("âœ… ĞŸĞ¾Ğ´ĞºĞ»ÑÑ‡ĞµĞ½Ğ¾ Ğº gRPC ÑĞµÑ€Ğ²ĞµÑ€Ñƒ, Ñ‚ĞµÑÑ‚Ğ¾Ğ²Ñ‹Ğ¹ Ğ·Ğ°Ğ¿Ñ€Ğ¾Ñ Ğ²Ñ‹Ğ¿Ğ¾Ğ»Ğ½ĞµĞ½")
	} else if testErr == nil {
		fmt.Println("âœ… ĞŸĞ¾Ğ´ĞºĞ»ÑÑ‡ĞµĞ½Ğ¾ Ğº gRPC ÑĞµÑ€Ğ²ĞµÑ€Ñƒ, Ñ‚ĞµÑÑ‚Ğ¾Ğ²Ñ‹Ğ¹ Ğ·Ğ°Ğ¿Ñ€Ğ¾Ñ ÑƒÑĞ¿ĞµÑˆĞµĞ½")
	} else {
		fmt.Printf("âš ï¸ ĞŸĞ¾Ğ´ĞºĞ»ÑÑ‡ĞµĞ½Ğ¾, Ğ½Ğ¾ Ñ‚ĞµÑÑ‚Ğ¾Ğ²Ñ‹Ğ¹ Ğ·Ğ°Ğ¿Ñ€Ğ¾Ñ Ğ½Ğµ Ğ¿Ñ€Ğ¾ÑˆĞµĞ»: %v\n", testErr)
	}

	startTime = time.Now()
	currentSlots = make(map[string]*SlotInfo)
	
	// Ğ˜Ğ½Ğ¸Ñ†Ğ¸Ğ°Ğ»Ğ¸Ğ·Ğ¸Ñ€ÑƒĞµĞ¼ Ğ³ĞµĞ½ĞµÑ€Ğ°Ñ‚Ğ¾Ñ€ ÑĞ»ÑƒÑ‡Ğ°Ğ¹Ğ½Ñ‹Ñ… Ñ‡Ğ¸ÑĞµĞ»
	rand.Seed(time.Now().UnixNano())
	
	// ĞŸĞ¾Ğ»ÑƒÑ‡Ğ°ĞµĞ¼ ÑĞ¿Ğ¸ÑĞ¾Ğº Ğ´Ğ¾ÑÑ‚ÑƒĞ¿Ğ½Ñ‹Ñ… Ğ¿Ğ¸Ñ†Ñ† Ğ¸Ğ· Ğ¼Ğ¾Ğ´ĞµĞ»Ğ¸ Ñ Ñ†ĞµĞ½Ğ°Ğ¼Ğ¸
	pizzaData := make(map[string]int) // name -> price
	for name, pizza := range models.AvailablePizzas {
		pizzaData[name] = pizza.Price
	}
	
	pizzaNames := make([]string, 0, len(pizzaData))
	for name := range pizzaData {
		pizzaNames = append(pizzaNames, name)
	}
	
	fmt.Printf("\nğŸš€ Ğ—ĞĞŸĞ£Ğ¡Ğš Ğ¡Ğ¢Ğ Ğ•Ğ¡Ğ¡-Ğ¢Ğ•Ğ¡Ğ¢Ğ Ğ¡Ğ˜Ğ¡Ğ¢Ğ•ĞœĞ« Ğ¡Ğ›ĞĞ¢ĞĞ’\n")
	fmt.Printf("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”\n")
	fmt.Printf("ğŸ“Š Ğ ĞµĞ¶Ğ¸Ğ¼: Ğ—Ğ°Ğ¿Ğ¾Ğ»Ğ½ĞµĞ½Ğ¸Ğµ ÑĞ»Ğ¾Ñ‚Ğ¾Ğ² Ğ´Ğ¾ Ğ¼Ğ°ĞºÑĞ¸Ğ¼Ğ°Ğ»ÑŒĞ½Ğ¾Ğ¹ ĞµĞ¼ĞºĞ¾ÑÑ‚Ğ¸\n")
	fmt.Printf("ğŸ• Ğ”Ğ¾ÑÑ‚ÑƒĞ¿Ğ½Ğ¾ Ğ¿Ğ¸Ñ†Ñ†: %d\n", len(pizzaNames))
	fmt.Printf("ğŸŒ HTTP API: %s\n", httpAddr)
	fmt.Printf("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”\n\n")

	// Ğ—Ğ°Ğ¿ÑƒÑĞºĞ°ĞµĞ¼ Ğ¼Ğ¾Ğ½Ğ¸Ñ‚Ğ¾Ñ€Ğ¸Ğ½Ğ³ ÑĞ»Ğ¾Ñ‚Ğ¾Ğ² ĞºĞ°Ğ¶Ğ´Ñ‹Ğµ 3 ÑĞµĞºÑƒĞ½Ğ´Ñ‹
	slotsStop := make(chan bool)
	var slotsWg sync.WaitGroup
	slotsWg.Add(1)
	go func() {
		defer slotsWg.Done()
		ticker := time.NewTicker(3 * time.Second)
		defer ticker.Stop()
		for {
			select {
			case <-slotsStop:
				return
			case <-ticker.C:
				updateSlotsInfo(httpAddr)
			}
		}
	}()

	// Ğ—Ğ°Ğ¿ÑƒÑĞºĞ°ĞµĞ¼ ÑĞ±Ğ¾Ñ€ ÑÑ‚Ğ°Ñ‚Ğ¸ÑÑ‚Ğ¸ĞºĞ¸ ĞºĞ°Ğ¶Ğ´Ñ‹Ğµ 5 ÑĞµĞºÑƒĞ½Ğ´
	statsStop := make(chan bool)
	var statsWg sync.WaitGroup
	statsWg.Add(1)
	go func() {
		defer statsWg.Done()
		ticker := time.NewTicker(5 * time.Second)
		defer ticker.Stop()
		for {
			select {
			case <-statsStop:
				return
			case <-ticker.C:
				printStats()
				printSlotsStats()
			}
		}
	}()

	// Ğ—Ğ°Ğ¿ÑƒÑĞºĞ°ĞµĞ¼ ÑÑ‚Ñ€ĞµÑÑ-Ñ‚ĞµÑÑ‚: Ğ·Ğ°Ğ¿Ğ¾Ğ»Ğ½ÑĞµĞ¼ ÑĞ»Ğ¾Ñ‚Ñ‹
	testDuration := 1 * time.Hour // 1 Ñ‡Ğ°Ñ Ñ‚ĞµÑÑ‚Ğ°
	stop := time.After(testDuration)
	
	// Ğ—Ğ°Ğ¿ÑƒÑĞºĞ°ĞµĞ¼ Ğ·Ğ°Ğ¿Ğ¾Ğ»Ğ½ĞµĞ½Ğ¸Ğµ ÑĞ»Ğ¾Ñ‚Ğ¾Ğ²
	fillSlotsWorker(client, pizzaData, httpAddr)
	
	// Ğ–Ğ´ĞµĞ¼ Ğ·Ğ°Ğ²ĞµÑ€ÑˆĞµĞ½Ğ¸Ñ Ñ‚ĞµÑÑ‚Ğ°
	<-stop
	fmt.Println("\nâ¹ï¸  Ğ’Ñ€ĞµĞ¼Ñ Ñ‚ĞµÑÑ‚Ğ° Ğ¸ÑÑ‚ĞµĞºĞ»Ğ¾, Ğ·Ğ°Ğ²ĞµÑ€ÑˆĞ°ĞµĞ¼...")
	close(slotsStop)
	close(statsStop)
	slotsWg.Wait()
	statsWg.Wait()
	printFinalStats()
	printSlotsStats()
}

// updateSlotsInfo Ğ¿Ğ¾Ğ»ÑƒÑ‡Ğ°ĞµÑ‚ Ğ°ĞºÑ‚ÑƒĞ°Ğ»ÑŒĞ½ÑƒÑ Ğ¸Ğ½Ñ„Ğ¾Ñ€Ğ¼Ğ°Ñ†Ğ¸Ñ Ğ¾ ÑĞ»Ğ¾Ñ‚Ğ°Ñ… Ñ‡ĞµÑ€ĞµĞ· HTTP API
func updateSlotsInfo(httpAddr string) {
	url := fmt.Sprintf("%s/api/v1/erp/slots", httpAddr)
	
	client := &http.Client{Timeout: 5 * time.Second}
	resp, err := client.Get(url)
	if err != nil {
		return // Ğ¢Ğ¸Ñ…Ğ°Ñ Ğ¾ÑˆĞ¸Ğ±ĞºĞ°, Ğ½Ğµ Ğ»Ğ¾Ğ³Ğ¸Ñ€ÑƒĞµĞ¼
	}
	defer resp.Body.Close()
	
	if resp.StatusCode != http.StatusOK {
		return
	}
	
	body, err := io.ReadAll(resp.Body)
	if err != nil {
		return
	}
	
	var slotsResponse struct {
		Slots []SlotInfo `json:"slots"`
		Count int        `json:"count"`
	}
	
	if err := json.Unmarshal(body, &slotsResponse); err != nil {
		return
	}
	
	slotMutex.Lock()
	defer slotMutex.Unlock()
	
	currentSlots = make(map[string]*SlotInfo)
	for i := range slotsResponse.Slots {
		slot := &slotsResponse.Slots[i]
		currentSlots[slot.SlotID] = slot
	}
}

// fillSlotsWorker Ğ·Ğ°Ğ¿Ğ¾Ğ»Ğ½ÑĞµÑ‚ ÑĞ»Ğ¾Ñ‚Ñ‹ Ğ·Ğ°ĞºĞ°Ğ·Ğ°Ğ¼Ğ¸ Ğ´Ğ¾ Ğ¼Ğ°ĞºÑĞ¸Ğ¼Ğ°Ğ»ÑŒĞ½Ğ¾Ğ¹ ĞµĞ¼ĞºĞ¾ÑÑ‚Ğ¸
func fillSlotsWorker(client pb.OrderServiceClient, pizzaData map[string]int, httpAddr string) {
	// ĞŸĞ¾Ğ»ÑƒÑ‡Ğ°ĞµĞ¼ ÑĞ¿Ğ¸ÑĞ¾Ğº Ğ¿Ğ¸Ñ†Ñ† Ñ Ñ†ĞµĞ½Ğ°Ğ¼Ğ¸
	pizzaNames := make([]string, 0, len(pizzaData))
	pizzaPrices := make([]int, 0, len(pizzaData))
	for name, price := range pizzaData {
		pizzaNames = append(pizzaNames, name)
		pizzaPrices = append(pizzaPrices, price)
	}
	
	if len(pizzaNames) == 0 {
		fmt.Printf("âŒ ĞĞµÑ‚ Ğ´Ğ¾ÑÑ‚ÑƒĞ¿Ğ½Ñ‹Ñ… Ğ¿Ğ¸Ñ†Ñ† Ğ² Ğ¼ĞµĞ½Ñ!\n")
		return
	}
	
	// ĞĞ°Ñ…Ğ¾Ğ´Ğ¸Ğ¼ ÑĞ°Ğ¼ÑƒÑ Ğ´ĞµÑˆĞµĞ²ÑƒÑ Ğ¿Ğ¸Ñ†Ñ†Ñƒ Ğ´Ğ»Ñ fallback
	cheapestPizza := pizzaNames[0]
	cheapestPrice := pizzaPrices[0]
	for i, price := range pizzaPrices {
		if price < cheapestPrice {
			cheapestPrice = price
			cheapestPizza = pizzaNames[i]
		}
	}
	
	// Ğ—Ğ°Ğ¿ÑƒÑĞºĞ°ĞµĞ¼ Ğ²Ğ¾Ñ€ĞºĞµÑ€Ñ‹ Ğ´Ğ»Ñ Ğ·Ğ°Ğ¿Ğ¾Ğ»Ğ½ĞµĞ½Ğ¸Ñ ÑĞ»Ğ¾Ñ‚Ğ¾Ğ² (ÑƒĞ¼ĞµĞ½ÑŒÑˆĞ¸Ğ»Ğ¸ Ğ´Ğ¾ 2 Ğ´Ğ»Ñ Ğ¸Ğ·Ğ±ĞµĞ¶Ğ°Ğ½Ğ¸Ñ race condition)
	for i := 0; i < 2; i++ {
		go func(workerID int) {
			for {
				// ĞŸĞ¾Ğ»ÑƒÑ‡Ğ°ĞµĞ¼ Ğ°ĞºÑ‚ÑƒĞ°Ğ»ÑŒĞ½ÑƒÑ Ğ¸Ğ½Ñ„Ğ¾Ñ€Ğ¼Ğ°Ñ†Ğ¸Ñ Ğ¾ ÑĞ»Ğ¾Ñ‚Ğ°Ñ… Ğ¿ĞµÑ€ĞµĞ´ ĞºĞ°Ğ¶Ğ´Ñ‹Ğ¼ Ğ·Ğ°ĞºĞ°Ğ·Ğ¾Ğ¼
				updateSlotsInfo(httpAddr)
				
				slotMutex.RLock()
				slots := make([]*SlotInfo, 0, len(currentSlots))
				for _, slot := range currentSlots {
					slots = append(slots, slot)
				}
				slotMutex.RUnlock()
				
				if len(slots) == 0 {
					// ĞĞµÑ‚ ÑĞ»Ğ¾Ñ‚Ğ¾Ğ², Ğ¶Ğ´ĞµĞ¼
					time.Sleep(2 * time.Second)
					continue
				}
				
				// ĞĞ°Ñ…Ğ¾Ğ´Ğ¸Ğ¼ ÑĞ»Ğ¾Ñ‚ Ñ Ğ½Ğ°Ğ¸Ğ±Ğ¾Ğ»ÑŒÑˆĞ¸Ğ¼ ÑĞ²Ğ¾Ğ±Ğ¾Ğ´Ğ½Ñ‹Ğ¼ Ğ¼ĞµÑÑ‚Ğ¾Ğ¼
				// ĞĞ: Ğ²Ñ‹Ğ±Ğ¸Ñ€Ğ°ĞµĞ¼ Ñ‚Ğ¾Ğ»ÑŒĞºĞ¾ ÑĞ»Ğ¾Ñ‚Ñ‹, Ğ·Ğ°Ğ¿Ğ¾Ğ»Ğ½ĞµĞ½Ğ½Ñ‹Ğµ Ğ¼ĞµĞ½ĞµĞµ Ñ‡ĞµĞ¼ Ğ½Ğ° 80% (Ğ·Ğ°Ñ‰Ğ¸Ñ‚Ğ° Ğ¾Ñ‚ race condition)
				var targetSlot *SlotInfo
				maxRemaining := 0
				for _, slot := range slots {
					loadPercent := float64(slot.CurrentLoad) / float64(slot.MaxCapacity) * 100
					remaining := slot.MaxCapacity - slot.CurrentLoad
					
					// Ğ’Ñ‹Ğ±Ğ¸Ñ€Ğ°ĞµĞ¼ ÑĞ»Ğ¾Ñ‚, ĞºĞ¾Ñ‚Ğ¾Ñ€Ñ‹Ğ¹ Ğ·Ğ°Ğ¿Ğ¾Ğ»Ğ½ĞµĞ½ Ğ¼ĞµĞ½ĞµĞµ Ñ‡ĞµĞ¼ Ğ½Ğ° 80% Ğ¸ Ğ¸Ğ¼ĞµĞµÑ‚ Ğ´Ğ¾ÑÑ‚Ğ°Ñ‚Ğ¾Ñ‡Ğ½Ğ¾ Ğ¼ĞµÑÑ‚Ğ°
					if loadPercent < 80.0 && remaining > maxRemaining && remaining >= cheapestPrice*2 {
						maxRemaining = remaining
						targetSlot = slot
					}
				}
				
				if targetSlot == nil {
					// Ğ’ÑĞµ ÑĞ»Ğ¾Ñ‚Ñ‹ Ğ·Ğ°Ğ¿Ğ¾Ğ»Ğ½ĞµĞ½Ñ‹ Ğ±Ğ¾Ğ»ĞµĞµ Ñ‡ĞµĞ¼ Ğ½Ğ° 80%, Ğ¶Ğ´ĞµĞ¼
					time.Sleep(500 * time.Millisecond)
					continue
				}
				
				// Ğ’Ñ‹Ñ‡Ğ¸ÑĞ»ÑĞµĞ¼, ÑĞºĞ¾Ğ»ÑŒĞºĞ¾ Ğ¼ĞµÑÑ‚Ğ° Ğ¾ÑÑ‚Ğ°Ğ»Ğ¾ÑÑŒ
				remaining := targetSlot.MaxCapacity - targetSlot.CurrentLoad
				
				// Ğ’Ñ‹Ğ±Ğ¸Ñ€Ğ°ĞµĞ¼ Ğ¿Ğ¸Ñ†Ñ†Ñƒ Ğ¸ ĞºĞ¾Ğ»Ğ¸Ñ‡ĞµÑÑ‚Ğ²Ğ¾, ĞºĞ¾Ñ‚Ğ¾Ñ€Ñ‹Ğµ Ñ‚Ğ¾Ñ‡Ğ½Ğ¾ Ğ¿Ğ¾Ğ¼ĞµÑÑ‚ÑÑ‚ÑÑ
				// Ğ£Ğ²ĞµĞ»Ğ¸Ñ‡Ğ¸Ğ²Ğ°ĞµĞ¼ Ğ·Ğ°Ğ¿Ğ°Ñ Ğ´Ğ¾ 500â‚½ Ğ´Ğ»Ñ Ğ·Ğ°Ñ‰Ğ¸Ñ‚Ñ‹ Ğ¾Ñ‚ race condition
				var selectedPizza string
				var quantity int32 = 1
				
				// ĞŸÑ€Ğ¾Ğ±ÑƒĞµĞ¼ Ğ½Ğ°Ğ¹Ñ‚Ğ¸ Ğ¿Ğ¾Ğ´Ñ…Ğ¾Ğ´ÑÑ‰ÑƒÑ Ğ¿Ğ¸Ñ†Ñ†Ñƒ
				found := false
				for attempts := 0; attempts < 50; attempts++ {
					idx := rand.Intn(len(pizzaNames))
					pizzaName := pizzaNames[idx]
					price := pizzaPrices[idx]
					
					// Ğ’Ñ‹Ñ‡Ğ¸ÑĞ»ÑĞµĞ¼ Ğ¼Ğ°ĞºÑĞ¸Ğ¼Ğ°Ğ»ÑŒĞ½Ğ¾Ğµ ĞºĞ¾Ğ»Ğ¸Ñ‡ĞµÑÑ‚Ğ²Ğ¾, ĞºĞ¾Ñ‚Ğ¾Ñ€Ğ¾Ğµ Ğ¿Ğ¾Ğ¼ĞµÑÑ‚Ğ¸Ñ‚ÑÑ
					// ĞÑÑ‚Ğ°Ğ²Ğ»ÑĞµĞ¼ Ğ·Ğ°Ğ¿Ğ°Ñ 500â‚½ Ğ½Ğ° ÑĞ»ÑƒÑ‡Ğ°Ğ¹ race condition
					maxQty := (remaining - 500) / price
					if maxQty > 3 {
						maxQty = 3 // ĞœĞ°ĞºÑĞ¸Ğ¼ÑƒĞ¼ 3 ÑˆÑ‚ÑƒĞºĞ¸
					}
					if maxQty < 1 {
						maxQty = 1
					}
					
					// Ğ’Ñ‹Ğ±Ğ¸Ñ€Ğ°ĞµĞ¼ ÑĞ»ÑƒÑ‡Ğ°Ğ¹Ğ½Ğ¾Ğµ ĞºĞ¾Ğ»Ğ¸Ñ‡ĞµÑÑ‚Ğ²Ğ¾ Ğ¾Ñ‚ 1 Ğ´Ğ¾ maxQty
					qty := int32(rand.Intn(int(maxQty)) + 1)
					total := price * int(qty)
					
					// ĞŸÑ€Ğ¾Ğ²ĞµÑ€ÑĞµĞ¼, Ñ‡Ñ‚Ğ¾ Ğ·Ğ°ĞºĞ°Ğ· Ñ‚Ğ¾Ñ‡Ğ½Ğ¾ Ğ¿Ğ¾Ğ¼ĞµÑÑ‚Ğ¸Ñ‚ÑÑ (Ñ Ğ·Ğ°Ğ¿Ğ°ÑĞ¾Ğ¼ 500â‚½)
					if total <= remaining-500 {
						selectedPizza = pizzaName
						quantity = qty
						found = true
						break
					}
				}
				
				if !found {
					// ĞĞµ Ğ½Ğ°ÑˆĞ»Ğ¸ Ğ¿Ğ¾Ğ´Ñ…Ğ¾Ğ´ÑÑ‰ÑƒÑ ĞºĞ¾Ğ¼Ğ±Ğ¸Ğ½Ğ°Ñ†Ğ¸Ñ, Ğ±ĞµÑ€ĞµĞ¼ ÑĞ°Ğ¼ÑƒÑ Ğ´ĞµÑˆĞµĞ²ÑƒÑ Ğ¿Ğ¸Ñ†Ñ†Ñƒ
					if cheapestPrice <= remaining-500 {
						selectedPizza = cheapestPizza
						quantity = 1
						found = true
					}
				}
				
				if !found || selectedPizza == "" {
					// ĞĞµ Ğ¼Ğ¾Ğ¶ĞµĞ¼ Ğ¾Ñ‚Ğ¿Ñ€Ğ°Ğ²Ğ¸Ñ‚ÑŒ Ğ·Ğ°ĞºĞ°Ğ·, Ğ¿Ñ€Ğ¾Ğ¿ÑƒÑĞºĞ°ĞµĞ¼ ÑÑ‚Ğ¾Ñ‚ ÑĞ»Ğ¾Ñ‚
					time.Sleep(300 * time.Millisecond)
					continue
				}
				
				// ĞÑ‚Ğ¿Ñ€Ğ°Ğ²Ğ»ÑĞµĞ¼ Ğ·Ğ°ĞºĞ°Ğ·
				atomic.AddInt64(&totalRequests, 1)
				
				reqCtx, reqCancel := context.WithTimeout(context.Background(), 10*time.Second)
				_, err := client.CreateOrder(reqCtx, &pb.PizzaOrderRequest{
					CustomerId: 777 + int32(workerID),
					PizzaName:  selectedPizza,
					Quantity:   quantity,
				})
				reqCancel()
				
				if err == nil {
					atomic.AddInt64(&successRequests, 1)
					// Ğ—Ğ°Ğ´ĞµÑ€Ğ¶ĞºĞ° Ğ¿ĞµÑ€ĞµĞ´ ÑĞ»ĞµĞ´ÑƒÑÑ‰Ğ¸Ğ¼ Ğ·Ğ°ĞºĞ°Ğ·Ğ¾Ğ¼ (ÑƒĞ²ĞµĞ»Ğ¸Ñ‡ĞµĞ½Ğ° Ğ´Ğ»Ñ Ğ¸Ğ·Ğ±ĞµĞ¶Ğ°Ğ½Ğ¸Ñ race condition)
					time.Sleep(200 * time.Millisecond)
				} else {
					atomic.AddInt64(&failedRequests, 1)
					// ĞŸÑ€Ğ¸ Ğ¾ÑˆĞ¸Ğ±ĞºĞµ Ğ¶Ğ´ĞµĞ¼ Ğ´Ğ¾Ğ»ÑŒÑˆĞµ
					time.Sleep(1 * time.Second)
				}
			}
		}(i)
	}
}

func printStats() {
	elapsed := time.Since(startTime).Seconds()
	if elapsed == 0 {
		return
	}

	total := atomic.LoadInt64(&totalRequests)
	success := atomic.LoadInt64(&successRequests)
	failed := atomic.LoadInt64(&failedRequests)
	currentRPS := float64(total) / elapsed
	successRate := float64(0)
	if total > 0 {
		successRate = float64(success) / float64(total) * 100
	}

	hours := int(elapsed) / 3600
	minutes := (int(elapsed) % 3600) / 60
	seconds := int(elapsed) % 60

	fmt.Printf("â±ï¸  [%02d:%02d:%02d] Ğ’ÑĞµĞ³Ğ¾: %d | âœ… Ğ£ÑĞ¿ĞµÑˆĞ½Ğ¾: %d (%.1f%%) | âŒ ĞÑˆĞ¸Ğ±Ğ¾Ğº: %d | RPS: %.1f\n",
		hours, minutes, seconds, total, success, successRate, failed, currentRPS)
}

func printSlotsStats() {
	slotMutex.RLock()
	defer slotMutex.RUnlock()
	
	if len(currentSlots) == 0 {
		return
	}
	
	fmt.Printf("\nğŸ“Š Ğ¡Ğ¢ĞĞ¢Ğ˜Ğ¡Ğ¢Ğ˜ĞšĞ Ğ¡Ğ›ĞĞ¢ĞĞ’:\n")
	fmt.Printf("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”\n")
	
	totalSlots := len(currentSlots)
	filledSlots := 0
	totalLoad := 0
	totalCapacity := 0
	
	for _, slot := range currentSlots {
		totalLoad += slot.CurrentLoad
		totalCapacity += slot.MaxCapacity
		if slot.CurrentLoad >= slot.MaxCapacity {
			filledSlots++
		}
	}
	
	avgLoad := float64(0)
	if totalCapacity > 0 {
		avgLoad = float64(totalLoad) / float64(totalCapacity) * 100
	}
	
	fmt.Printf("ğŸ“¦ Ğ’ÑĞµĞ³Ğ¾ ÑĞ»Ğ¾Ñ‚Ğ¾Ğ²: %d\n", totalSlots)
	fmt.Printf("âœ… Ğ—Ğ°Ğ¿Ğ¾Ğ»Ğ½ĞµĞ½Ğ¾ Ğ¿Ğ¾Ğ»Ğ½Ğ¾ÑÑ‚ÑŒÑ: %d (%.1f%%)\n", filledSlots, float64(filledSlots)/float64(totalSlots)*100)
	fmt.Printf("ğŸ’° ĞĞ±Ñ‰Ğ°Ñ Ğ·Ğ°Ğ³Ñ€ÑƒĞ·ĞºĞ°: %dâ‚½ / %dâ‚½ (%.1f%%)\n", totalLoad, totalCapacity, avgLoad)
	
	// ĞŸĞ¾ĞºĞ°Ğ·Ñ‹Ğ²Ğ°ĞµĞ¼ Ñ‚Ğ¾Ğ¿-5 ÑĞ°Ğ¼Ñ‹Ñ… Ğ·Ğ°Ğ³Ñ€ÑƒĞ¶ĞµĞ½Ğ½Ñ‹Ñ… ÑĞ»Ğ¾Ñ‚Ğ¾Ğ²
	fmt.Printf("\nğŸ” Ğ¢Ğ¾Ğ¿-5 ÑĞ°Ğ¼Ñ‹Ñ… Ğ·Ğ°Ğ³Ñ€ÑƒĞ¶ĞµĞ½Ğ½Ñ‹Ñ… ÑĞ»Ğ¾Ñ‚Ğ¾Ğ²:\n")
	slotsList := make([]*SlotInfo, 0, len(currentSlots))
	for _, slot := range currentSlots {
		slotsList = append(slotsList, slot)
	}
	
	// Ğ¡Ğ¾Ñ€Ñ‚Ğ¸Ñ€ÑƒĞµĞ¼ Ğ¿Ğ¾ Ğ·Ğ°Ğ³Ñ€ÑƒĞ·ĞºĞµ (Ğ¿Ñ€Ğ¾ÑÑ‚Ğ°Ñ ÑĞ¾Ñ€Ñ‚Ğ¸Ñ€Ğ¾Ğ²ĞºĞ°)
	for i := 0; i < len(slotsList) && i < 5; i++ {
		maxIdx := i
		for j := i + 1; j < len(slotsList); j++ {
			if slotsList[j].CurrentLoad > slotsList[maxIdx].CurrentLoad {
				maxIdx = j
			}
		}
		slotsList[i], slotsList[maxIdx] = slotsList[maxIdx], slotsList[i]
		
		slot := slotsList[i]
		loadPercent := float64(slot.CurrentLoad) / float64(slot.MaxCapacity) * 100
		fmt.Printf("  %d. %s: %dâ‚½ / %dâ‚½ (%.1f%%)\n", 
			i+1, slot.SlotID[:12], slot.CurrentLoad, slot.MaxCapacity, loadPercent)
	}
	fmt.Printf("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”\n")
}

func printFinalStats() {
	duration := time.Since(startTime)
	total := atomic.LoadInt64(&totalRequests)
	success := atomic.LoadInt64(&successRequests)
	failed := atomic.LoadInt64(&failedRequests)
	rps := float64(0)
	if duration.Seconds() > 0 {
		rps = float64(total) / duration.Seconds()
	}
	successRate := float64(0)
	if total > 0 {
		successRate = float64(success) / float64(total) * 100
	}

	fmt.Printf("\nâ”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”\n")
	fmt.Printf("ğŸ Ğ¡Ğ¢Ğ Ğ•Ğ¡Ğ¡-Ğ¢Ğ•Ğ¡Ğ¢ ĞĞšĞĞĞ§Ğ•Ğ\n")
	fmt.Printf("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”\n")
	fmt.Printf("â±ï¸  Ğ’Ñ€ĞµĞ¼Ñ Ñ€Ğ°Ğ±Ğ¾Ñ‚Ñ‹: %v (%.2f ÑĞµĞºÑƒĞ½Ğ´)\n", duration, duration.Seconds())
	fmt.Printf("ğŸ“ˆ Ğ’ÑĞµĞ³Ğ¾ Ğ·Ğ°ĞºĞ°Ğ·Ğ¾Ğ² Ğ¾Ñ‚Ğ¿Ñ€Ğ°Ğ²Ğ»ĞµĞ½Ğ¾: %d\n", total)
	fmt.Printf("âœ… Ğ£ÑĞ¿ĞµÑˆĞ½Ñ‹Ñ…: %d (%.2f%%)\n", success, successRate)
	fmt.Printf("âŒ ĞÑˆĞ¸Ğ±Ğ¾Ğº: %d (%.2f%%)\n", failed, 100-successRate)
	fmt.Printf("âš¡ Ğ¡Ñ€ĞµĞ´Ğ½Ğ¸Ğ¹ RPS: %.2f Ğ·Ğ°ĞºĞ°Ğ·Ğ¾Ğ²/ÑĞµĞº\n", rps)
	fmt.Printf("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”\n")
}
