package api

import (
	"context"
	"fmt"
	"log"
	"regexp"
	"strings"
	"sync/atomic"
	"time"

	"github.com/google/uuid"
	"github.com/segmentio/kafka-go"
	"gorm.io/gorm"
	"google.golang.org/protobuf/proto"
	"zephyrvpn/server/internal/models"
	"zephyrvpn/server/internal/pb" // –ù–∞—à —Å–≥–µ–Ω–µ—Ä–∏—Ä–æ–≤–∞–Ω–Ω—ã–π –∫–æ–¥
	"zephyrvpn/server/internal/services"
	"zephyrvpn/server/internal/utils"
)

type OrderGRPCServer struct {
	pb.UnimplementedOrderServiceServer
	redisUtil     *utils.RedisClient
	slotService   *services.SlotService
	orderService  *services.OrderService // –î–ª—è —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è –≤ PostgreSQL
	kafkaWriter   *kafka.Writer
	kafkaSentCount int64 // –°—á–µ—Ç—á–∏–∫ –æ—Ç–ø—Ä–∞–≤–ª–µ–Ω–Ω—ã—Ö —Å–æ–æ–±—â–µ–Ω–∏–π
}

func NewOrderGRPCServer(redisUtil *utils.RedisClient, kafkaBrokers string, db interface{}, openHour, openMin, closeHour, closeMin int, username, password, caCert string, orderService *services.OrderService) *OrderGRPCServer {
	var kafkaWriter *kafka.Writer
	if kafkaBrokers != "" {
		// –°–æ–∑–¥–∞–µ–º dialer —Å SASL/PLAIN –∏ TLS –µ—Å–ª–∏ –Ω—É–∂–Ω–æ
		dialer := CreateKafkaDialer(username, password, caCert)
		
		// –°–æ–∑–¥–∞–µ–º Kafka writer –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ Protobuf —Å–æ–æ–±—â–µ–Ω–∏–π
		brokers := ParseKafkaBrokers(kafkaBrokers)
		kafkaWriter = &kafka.Writer{
			Addr:     kafka.TCP(brokers...),
			Topic:    "pizza-orders", // –¢–æ–ø–∏–∫ –¥–ª—è –∑–∞–∫–∞–∑–æ–≤ (–±–∏–Ω–∞—Ä–Ω—ã–π Protobuf)
			Balancer: &kafka.LeastBytes{}, // –ë–∞–ª–∞–Ω—Å–∏—Ä–æ–≤–∫–∞ –ø–æ –Ω–∞–∏–º–µ–Ω—å—à–µ–º—É –∫–æ–ª–∏—á–µ—Å—Ç–≤—É –±–∞–π—Ç
			Async:    true, // –ê—Å–∏–Ω—Ö—Ä–æ–Ω–Ω–∞—è –æ—Ç–ø—Ä–∞–≤–∫–∞ –¥–ª—è –º–∞–∫—Å–∏–º–∞–ª—å–Ω–æ–π —Å–∫–æ—Ä–æ—Å—Ç–∏
			Transport: &kafka.Transport{
				SASL: dialer.SASLMechanism,
				TLS:  dialer.TLS,
				Dial: dialer.DialFunc,
			},
		}
		log.Printf("‚úÖ Kafka producer –ø–æ–¥–∫–ª—é—á–µ–Ω –∫ %s", kafkaBrokers)
	} else {
		log.Println("‚ö†Ô∏è Kafka producer –ù–ï —Å–æ–∑–¥–∞–Ω: KAFKA_BROKERS –Ω–µ —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω")
	}

	// –ü—Ä–µ–æ–±—Ä–∞–∑—É–µ–º db –≤ *gorm.DB –µ—Å–ª–∏ –≤–æ–∑–º–æ–∂–Ω–æ
	var gormDB *gorm.DB
	if db != nil {
		if gdb, ok := db.(*gorm.DB); ok {
			gormDB = gdb
		}
	}
	slotService := services.NewSlotService(redisUtil, gormDB, openHour, openMin, closeHour, closeMin)
	
	return &OrderGRPCServer{
		redisUtil:   redisUtil,
		slotService: slotService,
		orderService: orderService,
		kafkaWriter: kafkaWriter,
	}
}

// Close –∑–∞–∫—Ä—ã–≤–∞–µ—Ç Kafka writer
func (s *OrderGRPCServer) Close() error {
	if s.kafkaWriter != nil {
		return s.kafkaWriter.Close()
	}
	return nil
}

func (s *OrderGRPCServer) CreateOrder(ctx context.Context, req *pb.PizzaOrderRequest) (*pb.OrderResponse, error) {
	// 1. –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º gRPC –∑–∞–ø—Ä–æ—Å –≤ Protobuf –∑–∞–∫–∞–∑ (–ë–ï–ó JSON Marshal - —ç—Ç–æ –∫–ª—é—á–µ–≤–∞—è –æ–ø—Ç–∏–º–∏–∑–∞—Ü–∏—è!)
	fullID := uuid.New().String()
	// –ò–∑–≤–ª–µ–∫–∞–µ–º —Ç–æ–ª—å–∫–æ —Ü–∏—Ñ—Ä—ã –∏–∑ UUID –∏ –±–µ—Ä–µ–º –ø–æ—Å–ª–µ–¥–Ω–∏–µ 4
	re := regexp.MustCompile(`\d+`)
	digits := re.FindAllString(fullID, -1)
	digitsOnly := strings.Join(digits, "")
	if len(digitsOnly) < 4 {
		digitsOnly = "0000" // Fallback –µ—Å–ª–∏ —Ü–∏—Ñ—Ä –º–∞–ª–æ
	}
	displayID := digitsOnly[len(digitsOnly)-4:] // –ü–æ—Å–ª–µ–¥–Ω–∏–µ 4 —Ü–∏—Ñ—Ä—ã
	now := time.Now()

	// –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º Items –∏–∑ –∑–∞–ø—Ä–æ—Å–∞
	var pbItems []*pb.PizzaItem
	totalPrice := int64(0)
	isSet := false
	setName := ""
	
	// 1. –ü—Ä–æ–≤–µ—Ä—è–µ–º, –Ω–µ –∑–∞–∫–∞–∑–∞–ª –ª–∏ —é–∑–µ—Ä –°–ï–¢
	if set, ok := models.GetSet(req.PizzaName); ok {
		isSet = true
		setName = set.Name
		totalPrice = int64(set.Price)
		
		// –†–∞–∑–±–∏—Ä–∞–µ–º —Å–µ—Ç –Ω–∞ –æ—Ç–¥–µ–ª—å–Ω—ã–µ –ø–∏—Ü—Ü—ã –¥–ª—è –ø–æ–≤–∞—Ä–æ–≤
		for _, pName := range set.Pizzas {
			if recipe, ok := models.GetPizza(pName); ok {
				// –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º –¥–æ–∑–∏—Ä–æ–≤–∫–∏ –∏–Ω–≥—Ä–µ–¥–∏–µ–Ω—Ç–æ–≤ –∏–∑ –º–æ–¥–µ–ª–∏ –ø–∏—Ü—Ü—ã
				var ingredientAmounts map[string]int32
				if recipe.IngredientAmounts != nil {
					ingredientAmounts = make(map[string]int32)
					for k, v := range recipe.IngredientAmounts {
						ingredientAmounts[k] = int32(v)
					}
				}
				
				pbItems = append(pbItems, &pb.PizzaItem{
					PizzaName:         recipe.Name,
					Ingredients:       recipe.Ingredients,
					IngredientAmounts: ingredientAmounts,
					Quantity:          1, // –í —Å–µ—Ç–µ –æ–±—ã—á–Ω–æ –ø–æ –æ–¥–Ω–æ–π
					Price:             0, // –¶–µ–Ω–∞ —É–∂–µ –≤ TotalPrice —Å–µ—Ç–∞
					SetName:           set.Name,
					IsSetItem:         true, // –í–û–¢ –≠–¢–û–¢ –§–õ–ê–ì –†–ï–®–ê–ï–¢!
				})
			}
		}
	} else if req.PizzaName != "" {
		// 2. –ï—Å–ª–∏ —ç—Ç–æ –ø—Ä–æ—Å—Ç–æ –æ–¥–∏–Ω–æ—á–Ω–∞—è –ø–∏—Ü—Ü–∞
		// –í—ã—á–∏—Å–ª—è–µ–º —Ü–µ–Ω—É –û–î–ù–û–ô –ø–∏—Ü—Ü—ã –∏–∑ –º–µ–Ω—é (–ë–ï–ó —É–º–Ω–æ–∂–µ–Ω–∏—è –Ω–∞ quantity)
		pizzaPricePerUnit := int64(500) // –ë–∞–∑–æ–≤–∞—è —Ü–µ–Ω–∞ –ø–æ —É–º–æ–ª—á–∞–Ω–∏—é
		if pizza, exists := models.GetPizza(req.PizzaName); exists {
			pizzaPricePerUnit = int64(pizza.Price)
		}
		
		// –í—ã—á–∏—Å–ª—è–µ–º —Å—Ç–æ–∏–º–æ—Å—Ç—å –¥–æ–ø–æ–≤ (—Ç–æ–∂–µ –∑–∞ –µ–¥–∏–Ω–∏—Ü—É)
		extrasPricePerUnit := int64(0)
		for _, extraName := range req.Extras {
			if extra, exists := models.GetExtra(extraName); exists {
				extrasPricePerUnit += int64(extra.Price)
			}
		}
		
		// –û–±—â–∞—è —Ü–µ–Ω–∞ –∑–∞ –µ–¥–∏–Ω–∏—Ü—É (–ø–∏—Ü—Ü–∞ + –¥–æ–ø—ã)
		itemPricePerUnit := pizzaPricePerUnit + extrasPricePerUnit
		
		// –ü–æ–ª—É—á–∞–µ–º –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ
		quantity := int32(1)
		if req.Quantity > 0 {
			quantity = req.Quantity
		}
		
		// –í–ê–ñ–ù–û: totalPrice = —Ü–µ–Ω–∞ –∑–∞ –µ–¥–∏–Ω–∏—Ü—É * –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ
		totalPrice = itemPricePerUnit * int64(quantity)
		
		// –ü–æ–ª—É—á–∞–µ–º –∏–Ω–≥—Ä–µ–¥–∏–µ–Ω—Ç—ã –∏–∑ –º–µ–Ω—é –∏–ª–∏ –∏–∑ –∑–∞–ø—Ä–æ—Å–∞
		ingredients := req.Ingredients
		if len(ingredients) == 0 {
			if pizza, exists := models.GetPizza(req.PizzaName); exists {
				ingredients = pizza.Ingredients
			}
		}
		
		// –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º —Ü–µ–Ω—É –ó–ê –ï–î–ò–ù–ò–¶–£ –≤ int32 –¥–ª—è protobuf
		// –í–ê–ñ–ù–û: –í PizzaItem.Price –¥–æ–ª–∂–Ω–∞ –±—ã—Ç—å —Ü–µ–Ω–∞ –ó–ê –û–î–ù–£ –ø–∏—Ü—Ü—É, –∞ –Ω–µ –æ–±—â–∞—è!
		itemPricePerUnitInt32 := int32(itemPricePerUnit)
		if itemPricePerUnit > int64(^uint32(0)>>1) { // –ü—Ä–æ–≤–µ—Ä–∫–∞ –Ω–∞ –ø–µ—Ä–µ–ø–æ–ª–Ω–µ–Ω–∏–µ
			itemPricePerUnitInt32 = int32(^uint32(0) >> 1) // –ú–∞–∫—Å–∏–º–∞–ª—å–Ω–æ–µ –∑–Ω–∞—á–µ–Ω–∏–µ int32
		}
		
		// –ë–µ—Ä–µ–º –¥–æ–∑–∏—Ä–æ–≤–∫–∏ –∏–Ω–≥—Ä–µ–¥–∏–µ–Ω—Ç–æ–≤ –∏–∑ –º–æ–¥–µ–ª–∏ –ø–∏—Ü—Ü—ã
		var ingredientAmounts map[string]int32
		if pizza, exists := models.GetPizza(req.PizzaName); exists && pizza.IngredientAmounts != nil {
			// –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º map[string]int –≤ map[string]int32 –¥–ª—è protobuf
			ingredientAmounts = make(map[string]int32)
			for k, v := range pizza.IngredientAmounts {
				ingredientAmounts[k] = int32(v)
			}
		}
		
		pbItems = append(pbItems, &pb.PizzaItem{
			PizzaName:         req.PizzaName,
			Quantity:         quantity,
			Price:            itemPricePerUnitInt32, // –¶–µ–Ω–∞ –ó–ê –û–î–ù–£ –ø–∏—Ü—Ü—É, –Ω–µ –æ–±—â–∞—è!
			Ingredients:      ingredients,
			IngredientAmounts: ingredientAmounts,
			Extras:           req.Extras,
			IsSetItem:        false,
		})
	}

	// –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º totalPrice –≤ int32 –¥–ª—è protobuf
	totalPriceInt32 := int32(totalPrice)
	if totalPrice > int64(^uint32(0)>>1) { // –ü—Ä–æ–≤–µ—Ä–∫–∞ –Ω–∞ –ø–µ—Ä–µ–ø–æ–ª–Ω–µ–Ω–∏–µ
		totalPriceInt32 = int32(^uint32(0) >> 1) // –ú–∞–∫—Å–∏–º–∞–ª—å–Ω–æ–µ –∑–Ω–∞—á–µ–Ω–∏–µ int32
	}

	// –†–∞—Å—Å—á–∏—Ç—ã–≤–∞–µ–º —Å–∫–∏–¥–∫—É (–¥–ª—è gRPC –ø–æ–∫–∞ –Ω–µ—Ç —Å–∫–∏–¥–æ–∫, –Ω–æ –æ—Å—Ç–∞–≤–ª—è–µ–º —Å—Ç—Ä—É–∫—Ç—É—Ä—É)
	discountAmount := int32(0)
	discountPercent := int32(0)
	// TODO: –¥–æ–±–∞–≤–∏—Ç—å –ø–æ–¥–¥–µ—Ä–∂–∫—É —Å–∫–∏–¥–æ–∫ –≤ gRPC –∑–∞–ø—Ä–æ—Å–µ
	
	// –ò—Ç–æ–≥–æ–≤–∞—è —Ü–µ–Ω–∞: —Ç–æ–≤–∞—Ä—ã + –¥–æ—Å—Ç–∞–≤–∫–∞ - —Å–∫–∏–¥–∫–∞ (–¥–ª—è gRPC –¥–æ—Å—Ç–∞–≤–∫–∞ = 0)
	finalPrice := totalPriceInt32 - discountAmount

	// üéØ Capacity-Based Slot Scheduling: –Ω–∞–∑–Ω–∞—á–∞–µ–º —Å–ª–æ—Ç –ü–ï–†–ï–î —Å–æ–∑–¥–∞–Ω–∏–µ–º –∑–∞–∫–∞–∑–∞
	// –°—á–∏—Ç–∞–µ–º –æ–±—â–µ–µ –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ —ç–ª–µ–º–µ–Ω—Ç–æ–≤ (–ø–∏—Ü—Ü) –≤ –∑–∞–∫–∞–∑–µ
	itemsCount := 0
	for _, item := range pbItems {
		itemsCount += int(item.Quantity)
	}
	
	slotID, slotStartTime, visibleAt, err := s.slotService.AssignSlot(fullID, int(finalPrice), itemsCount)
	if err != nil {
		// –ï—Å–ª–∏ –Ω–µ —É–¥–∞–ª–æ—Å—å –Ω–∞–∑–Ω–∞—á–∏—Ç—å —Å–ª–æ—Ç, –≤–æ–∑–≤—Ä–∞—â–∞–µ–º –æ—à–∏–±–∫—É
		log.Printf("‚ùå OrderGRPCServer: –Ω–µ —É–¥–∞–ª–æ—Å—å –Ω–∞–∑–Ω–∞—á–∏—Ç—å —Å–ª–æ—Ç –¥–ª—è –∑–∞–∫–∞–∑–∞ %s: %v", fullID, err)
		return nil, fmt.Errorf("–Ω–µ —É–¥–∞–ª–æ—Å—å –Ω–∞–∑–Ω–∞—á–∏—Ç—å –≤—Ä–µ–º–µ–Ω–Ω–æ–π —Å–ª–æ—Ç –¥–ª—è –∑–∞–∫–∞–∑–∞: %w", err)
	}

	// –°–æ–∑–¥–∞–µ–º Protobuf –∑–∞–∫–∞–∑ –Ω–∞–ø—Ä—è–º—É—é
	pbOrder := &pb.PizzaOrder{
		Id:               fullID,
		DisplayId:        displayID,
		CustomerId:       req.CustomerId,
		CreatedAt:       now.UnixNano(),
		Status:           "pending",
		TotalPrice:       totalPriceInt32, // –¶–µ–Ω–∞ —Ç–æ–≤–∞—Ä–æ–≤ –±–µ–∑ –¥–æ—Å—Ç–∞–≤–∫–∏
		DiscountAmount:   discountAmount,
		DiscountPercent:  discountPercent,
		FinalPrice:       finalPrice, // –ò—Ç–æ–≥–æ–≤–∞—è —Ü–µ–Ω–∞: —Ç–æ–≤–∞—Ä—ã + –¥–æ—Å—Ç–∞–≤–∫–∞ - —Å–∫–∏–¥–∫–∞
		Items:            pbItems, // ‚úÖ –î–æ–±–∞–≤–ª—è–µ–º Items!
		IsSet:            isSet,
		SetName:          setName,
		TargetSlotId:     slotID,                    // üéØ –°–æ—Ö—Ä–∞–Ω—è–µ–º ID —Å–ª–æ—Ç–∞ –≤ –∑–∞–∫–∞–∑–µ
		VisibleAt:        visibleAt.Format(time.RFC3339), // üéØ –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤—Ä–µ–º—è –ø–æ–∫–∞–∑–∞ –∑–∞–∫–∞–∑–∞
		CustomerFirstName: req.CustomerFirstName,     // –î–∞–Ω–Ω—ã–µ –∫–ª–∏–µ–Ω—Ç–∞
		CustomerLastName:  req.CustomerLastName,
		CustomerPhone:     req.CustomerPhone,
		DeliveryAddress:  req.DeliveryAddress,
		IsPickup:         req.IsPickup,
		PickupLocationId: req.PickupLocationId,
	}

	// 2. –°–µ—Ä–∏–∞–ª–∏–∑—É–µ–º –≤ Protobuf (–±—ã—Å—Ç—Ä–µ–µ JSON –≤ 2-3 —Ä–∞–∑–∞!)
	orderBytes, err := proto.Marshal(pbOrder)
	if err != nil {
		log.Printf("‚ö†Ô∏è Protobuf Marshal error: %v", err)
		return nil, err
	}

	// 3. –ü—É–ª—è–µ–º –≤ Redis —á–µ—Ä–µ–∑ Pipeline (–ë–ï–ó JSON Marshal - —ç–∫–æ–Ω–æ–º–∏—è CPU!)
	pipe := s.redisUtil.Pipeline()
	redisCtx := s.redisUtil.Context()
	
	// –ù–∞–∫–∏–¥—ã–≤–∞–µ–º –∫–æ–º–∞–Ω–¥—ã –≤ –ø–∞—á–∫—É (–æ–Ω–∏ –µ—â–µ –Ω–µ —É—à–ª–∏ –≤ —Å–µ—Ç—å!)
	// –ò—Å–ø–æ–ª—å–∑—É–µ–º SetBytes –¥–ª—è –±–∏–Ω–∞—Ä–Ω—ã—Ö –¥–∞–Ω–Ω—ã—Ö Protobuf
	pipe.Set(redisCtx, fmt.Sprintf("erp:order:%s", fullID), orderBytes, 24*time.Hour)
	// –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤—Ä–µ–º—è –Ω–∞—á–∞–ª–∞ —Å–ª–æ—Ç–∞ –æ—Ç–¥–µ–ª—å–Ω–æ (–¥–ª—è —Ñ–∏–ª—å—Ç—Ä–∞—Ü–∏–∏ –∑–∞–∫–∞–∑–æ–≤ –ø–æ –≤—Ä–µ–º–µ–Ω–∏)
	if !slotStartTime.IsZero() {
		pipe.Set(redisCtx, fmt.Sprintf("order:slot:start:%s", fullID), slotStartTime.Format(time.RFC3339), 24*time.Hour)
	}
	pipe.LPush(redisCtx, "kitchen:orders:queue", fullID)
	pipe.Incr(redisCtx, "orders:total")
	pipe.Incr(redisCtx, "erp:orders:pending")
	
	// –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –í–°–Å –û–î–ù–ò–ú –≤—ã—Å—Ç—Ä–µ–ª–æ–º (—ç–∫–æ–Ω–æ–º–∏—è —Å–µ—Ç–µ–≤—ã—Ö –≤—ã–∑–æ–≤–æ–≤!)
	_, err = pipe.Exec(redisCtx)
	if err != nil {
		log.Printf("‚ö†Ô∏è Pipeline error –ø—Ä–∏ —Å–æ–∑–¥–∞–Ω–∏–∏ –∑–∞–∫–∞–∑–∞ —á–µ—Ä–µ–∑ gRPC %s: %v", fullID, err)
	}
	
	// –ù–ï –¥–æ–±–∞–≤–ª—è–µ–º –∑–∞–∫–∞–∑ –≤ –∞–∫—Ç–∏–≤–Ω—ã–µ —Å—Ä–∞–∑—É - –æ–Ω –ø–æ—è–≤–∏—Ç—Å—è —Ç–æ–ª—å–∫–æ –∫–æ–≥–¥–∞ –Ω–∞—Å—Ç—É–ø–∏—Ç VisibleAt
	// –°–æ—Ö—Ä–∞–Ω—è–µ–º –∑–∞–∫–∞–∑ –≤ –æ—Ç–¥–µ–ª—å–Ω—ã–π —Å–ø–∏—Å–æ–∫ –æ–∂–∏–¥–∞—é—â–∏—Ö –∑–∞–∫–∞–∑–æ–≤
	if !visibleAt.IsZero() {
		// –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤—Ä–µ–º—è –Ω–∞—á–∞–ª–∞ —Å–ª–æ—Ç–∞ –∏ –≤—Ä–µ–º—è –ø–æ–∫–∞–∑–∞ –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏
		s.redisUtil.Set(fmt.Sprintf("order:slot:start:%s", fullID), slotStartTime.Format(time.RFC3339), 24*time.Hour)
		s.redisUtil.Set(fmt.Sprintf("order:visible_at:%s", fullID), visibleAt.Format(time.RFC3339), 24*time.Hour)
		
		// –î–æ–±–∞–≤–ª—è–µ–º –≤ —Å–ø–∏—Å–æ–∫ –æ–∂–∏–¥–∞—é—â–∏—Ö –∑–∞–∫–∞–∑–æ–≤ (–Ω–µ –≤ –∞–∫—Ç–∏–≤–Ω—ã–µ!)
		s.redisUtil.SAdd("erp:orders:pending_slots", fullID)
		
		log.Printf("üìÖ –ó–∞–∫–∞–∑ %s –Ω–∞–∑–Ω–∞—á–µ–Ω –Ω–∞ —Å–ª–æ—Ç %s (–≤—Ä–µ–º—è –Ω–∞—á–∞–ª–∞: %s UTC, –±—É–¥–µ—Ç –ø–æ–∫–∞–∑–∞–Ω: %s UTC)", 
			fullID, slotID, slotStartTime.Format("15:04:05"), visibleAt.Format("15:04:05"))
	}

	// 4. –°–æ—Ö—Ä–∞–Ω—è–µ–º –∑–∞–∫–∞–∑ –≤ PostgreSQL (–∞—Å–∏–Ω—Ö—Ä–æ–Ω–Ω–æ, –Ω–µ –±–ª–æ–∫–∏—Ä—É–µ–º –æ—Ç–≤–µ—Ç!)
	if s.orderService != nil {
		go func() {
			// –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º pbOrder –≤ models.PizzaOrder –¥–ª—è —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è –≤ –ë–î
			order := models.PizzaOrder{
				ID:               pbOrder.Id,
				DisplayID:        pbOrder.DisplayId,
				CustomerID:       int(pbOrder.CustomerId),
				CustomerFirstName: pbOrder.CustomerFirstName,
				CustomerLastName:  pbOrder.CustomerLastName,
				CustomerPhone:     pbOrder.CustomerPhone,
				DeliveryAddress:   pbOrder.DeliveryAddress,
				PaymentMethod:     "", // –ú–æ–∂–Ω–æ –¥–æ–±–∞–≤–∏—Ç—å –≤ protobuf
				IsPickup:          pbOrder.IsPickup,
				PickupLocationID:  pbOrder.PickupLocationId,
				TotalPrice:        int(pbOrder.TotalPrice),
				Status:            pbOrder.Status,
				CreatedAt:         now,
				TargetSlotID:       pbOrder.TargetSlotId,
				VisibleAt:         visibleAt,
			}
			
			// –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º pbItems –≤ PizzaItem
			for _, pbItem := range pbOrder.Items {
				item := models.PizzaItem{
					PizzaName:   pbItem.PizzaName,
					Quantity:    int(pbItem.Quantity),
					Price:       int(pbItem.Price),
					Ingredients: pbItem.Ingredients,
					Extras:      pbItem.Extras,
				}
				// –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º ingredient_amounts
				if pbItem.IngredientAmounts != nil {
					item.IngredientAmounts = make(map[string]int)
					for k, v := range pbItem.IngredientAmounts {
						item.IngredientAmounts[k] = int(v)
					}
				}
				order.Items = append(order.Items, item)
			}
			
			if err := s.orderService.SaveOrder(order); err != nil {
				log.Printf("‚ö†Ô∏è –û—à–∏–±–∫–∞ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è –∑–∞–∫–∞–∑–∞ %s –≤ PostgreSQL: %v", fullID, err)
			} else {
				log.Printf("‚úÖ –ó–∞–∫–∞–∑ %s —Å–æ—Ö—Ä–∞–Ω–µ–Ω –≤ PostgreSQL", fullID)
			}
		}()
	}

	// 5. –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –±–∏–Ω–∞—Ä–Ω—ã–π Protobuf –≤ Kafka (–∞—Å–∏–Ω—Ö—Ä–æ–Ω–Ω–æ, –Ω–µ –±–ª–æ–∫–∏—Ä—É–µ–º –æ—Ç–≤–µ—Ç!)
	if s.kafkaWriter != nil {
		go func() {
			// –ò—Å–ø–æ–ª—å–∑—É–µ–º background context —Å —Ç–∞–π–º–∞—É—Ç–æ–º –¥–ª—è –∞—Å–∏–Ω—Ö—Ä–æ–Ω–Ω–æ–π –æ—Ç–ø—Ä–∞–≤–∫–∏
			// (–Ω–µ ctx –∏–∑ –∑–∞–ø—Ä–æ—Å–∞, –æ–Ω –º–æ–∂–µ—Ç –±—ã—Ç—å –æ—Ç–º–µ–Ω–µ–Ω!)
			bgCtx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
			defer cancel()
			
			// –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –±–∏–Ω–∞—Ä–Ω—ã–µ Protobuf –¥–∞–Ω–Ω—ã–µ –≤ Kafka
			err := s.kafkaWriter.WriteMessages(bgCtx, kafka.Message{
				Key:   []byte(fullID), // –ö–ª—é—á = ID –∑–∞–∫–∞–∑–∞
				Value: orderBytes,     // –ë–∏–Ω–∞—Ä–Ω—ã–π Protobuf (–ë–ï–ó JSON!)
			})
			if err != nil {
				// –ò–≥–Ω–æ—Ä–∏—Ä—É–µ–º –æ—à–∏–±–∫—É "Unknown Topic Or Partition" - —Ç–æ–ø–∏–∫ —Å–æ–∑–¥–∞—Å—Ç—Å—è –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏
				errStr := err.Error()
				if !strings.Contains(errStr, "Unknown Topic Or Partition") && 
				   !strings.Contains(errStr, "context canceled") {
					log.Printf("‚ö†Ô∏è Kafka error –ø—Ä–∏ –æ—Ç–ø—Ä–∞–≤–∫–µ –∑–∞–∫–∞–∑–∞ %s: %v", fullID, err)
				}
			} else {
				// –õ–æ–≥–∏—Ä—É–µ–º —É—Å–ø–µ—à–Ω—É—é –æ—Ç–ø—Ä–∞–≤–∫—É (—Ç–æ–ª—å–∫–æ –ø–µ—Ä–≤—ã–µ 10 –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏)
				atomic.AddInt64(&s.kafkaSentCount, 1)
				if atomic.LoadInt64(&s.kafkaSentCount) <= 10 {
					log.Printf("‚úÖ Kafka: –æ—Ç–ø—Ä–∞–≤–ª–µ–Ω –∑–∞–∫–∞–∑ %s (%d –±–∞–π—Ç Protobuf)", fullID, len(orderBytes))
				}
			}
		}()
	}

	// 5. –û—Ç–≤–µ—á–∞–µ–º –º–≥–Ω–æ–≤–µ–Ω–Ω–æ (–Ω–µ –∂–¥–µ–º Kafka!)
	return &pb.OrderResponse{
		OrderId:   fullID,
		DisplayId: displayID,
		Status:    "accepted_via_grpc",
	}, nil
}
