package api

import (
	"context"
	"encoding/json"
	"fmt"
	"log"
	"sync/atomic"
	"time"

	"github.com/segmentio/kafka-go"
	"google.golang.org/protobuf/proto"
	"zephyrvpn/server/internal/models"
	"zephyrvpn/server/internal/pb"
	"zephyrvpn/server/internal/utils"
)

// KafkaWSConsumer —á–∏—Ç–∞–µ—Ç –∑–∞–∫–∞–∑—ã –∏–∑ Kafka –∏ –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç –∏—Ö –≤ WebSocket
type KafkaWSConsumer struct {
	brokers    []string
	topic      string
	groupID    string
	reader     *kafka.Reader
	ctx        context.Context
	cancel     context.CancelFunc
	redisUtil  *utils.RedisClient
	processed  int64 // –°—á–µ—Ç—á–∏–∫ –æ–±—Ä–∞–±–æ—Ç–∞–Ω–Ω—ã—Ö –∑–∞–∫–∞–∑–æ–≤
	lastLog    int64 // –í—Ä–µ–º—è –ø–æ—Å–ª–µ–¥–Ω–µ–≥–æ –ª–æ–≥–∞
}

// NewKafkaWSConsumer —Å–æ–∑–¥–∞–µ—Ç –Ω–æ–≤—ã–π Kafka Consumer –¥–ª—è WebSocket
func NewKafkaWSConsumer(brokers string, topic string, redisUtil *utils.RedisClient, username, password, caCert string) *KafkaWSConsumer {
	brokerList := ParseKafkaBrokers(brokers)
	ctx, cancel := context.WithCancel(context.Background())
	
	// –°–æ–∑–¥–∞–µ–º dialer —Å SASL/PLAIN –∏ TLS –µ—Å–ª–∏ –Ω—É–∂–Ω–æ
	dialer := CreateKafkaDialer(username, password, caCert)
	
	reader := kafka.NewReader(kafka.ReaderConfig{
		Brokers:     brokerList,
		Topic:       topic,
		GroupID:     "kitchen-ws-group-v3", // –ù–æ–≤—ã–π GroupID —á—Ç–æ–±—ã —á–∏—Ç–∞—Ç—å –≤—Å–µ –∑–∞–∫–∞–∑—ã –∑–∞–Ω–æ–≤–æ
		StartOffset: kafka.FirstOffset,      // –ù–∞—á–∏–Ω–∞–µ–º —Å —Å–∞–º–æ–≥–æ –Ω–∞—á–∞–ª–∞ –æ—á–µ—Ä–µ–¥–∏
		MinBytes:    1,
		MaxBytes:    10e6,
		MaxWait:     1 * time.Second,
		Dialer:      dialer, // –ò—Å–ø–æ–ª—å–∑—É–µ–º dialer —Å SASL/TLS
	})
	
	return &KafkaWSConsumer{
		brokers:   brokerList,
		topic:     topic,
		groupID:  "kitchen-ws-group-v3",
		reader:   reader,
		ctx:      ctx,
		cancel:   cancel,
		redisUtil: redisUtil,
		lastLog:  time.Now().Unix(),
	}
}

// Start –∑–∞–ø—É—Å–∫–∞–µ—Ç —á—Ç–µ–Ω–∏–µ –∏–∑ Kafka –∏ –æ—Ç–ø—Ä–∞–≤–∫—É –≤ WebSocket
func (kc *KafkaWSConsumer) Start() {
	log.Printf("üì° Kafka WS Consumer –∑–∞–ø—É—â–µ–Ω: topic=%s, groupID=%s, startOffset=FirstOffset", kc.topic, kc.groupID)
	
	go func() {
		for {
			select {
			case <-kc.ctx.Done():
				log.Println("üõë Kafka WS Consumer –æ—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω")
				return
			default:
				// –ß–∏—Ç–∞–µ–º —Å–æ–æ–±—â–µ–Ω–∏–µ –∏–∑ Kafka
				msg, err := kc.reader.ReadMessage(kc.ctx)
				if err != nil {
					if err == context.Canceled {
						return
					}
					log.Printf("‚ö†Ô∏è Kafka WS Consumer –æ—à–∏–±–∫–∞ —á—Ç–µ–Ω–∏—è: %v", err)
					time.Sleep(1 * time.Second)
					continue
				}
				
				log.Printf("üì® Kafka WS Consumer: –ø–æ–ª—É—á–µ–Ω–æ —Å–æ–æ–±—â–µ–Ω–∏–µ offset=%d, partition=%d, size=%d bytes", 
					msg.Offset, msg.Partition, len(msg.Value))
				
				// –ü—Ä–æ–±—É–µ–º —Ä–∞—Å–ø–∞—Ä—Å–∏—Ç—å Protobuf
				pbOrder := &pb.PizzaOrder{}
				var order models.PizzaOrder
				
				if err := proto.Unmarshal(msg.Value, pbOrder); err == nil {
					// –£—Å–ø–µ—à–Ω–æ —Ä–∞—Å–ø–∞—Ä—Å–∏–ª–∏ Protobuf - –∫–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º –≤ models.PizzaOrder
					order = models.PizzaOrder{
						ID:               pbOrder.Id,
						DisplayID:        pbOrder.DisplayId,
						CustomerID:       int(pbOrder.CustomerId),
						CustomerFirstName: pbOrder.CustomerFirstName,
						CustomerLastName:  pbOrder.CustomerLastName,
						CustomerPhone:     pbOrder.CustomerPhone,
						DeliveryAddress:   pbOrder.DeliveryAddress,
						IsPickup:          pbOrder.IsPickup,
						PickupLocationID:  pbOrder.PickupLocationId,
						TotalPrice:        int(pbOrder.TotalPrice),
						CreatedAt:         time.Unix(0, pbOrder.CreatedAt),
						Status:            pbOrder.Status,
						IsSet:             pbOrder.IsSet,
						SetName:           pbOrder.SetName,
						TargetSlotID:      pbOrder.TargetSlotId,
					}
					
					// –ü–æ–ª—É—á–∞–µ–º VisibleAt –∏–∑ protobuf, –µ—Å–ª–∏ –µ—Å—Ç—å
					if pbOrder.VisibleAt != "" {
						if visibleAt, err := time.Parse(time.RFC3339, pbOrder.VisibleAt); err == nil {
							order.VisibleAt = visibleAt
						}
					}
					// –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º Items –µ—Å–ª–∏ –µ—Å—Ç—å
					for _, pbItem := range pbOrder.Items {
						item := models.PizzaItem{
							PizzaName:   pbItem.PizzaName,
							Ingredients: pbItem.Ingredients,
							Extras:      pbItem.Extras,
							Quantity:    int(pbItem.Quantity),
							Price:       int(pbItem.Price),
						}
						// –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º –¥–æ–∑–∏—Ä–æ–≤–∫–∏ –∏–∑ protobuf (map[string]int32 -> map[string]int)
						if pbItem.IngredientAmounts != nil && len(pbItem.IngredientAmounts) > 0 {
							item.IngredientAmounts = make(map[string]int)
							for k, v := range pbItem.IngredientAmounts {
								item.IngredientAmounts[k] = int(v)
							}
						} else {
							// –ï—Å–ª–∏ –¥–æ–∑–∏—Ä–æ–≤–æ–∫ –Ω–µ—Ç –≤ protobuf, –±–µ—Ä–µ–º –∏–∑ –º–æ–¥–µ–ª–∏ –ø–∏—Ü—Ü—ã
							if pizza, exists := models.GetPizza(pbItem.PizzaName); exists && pizza.IngredientAmounts != nil {
								item.IngredientAmounts = pizza.IngredientAmounts
							}
						}
						order.Items = append(order.Items, item)
					}
				} else {
					// Fallback –Ω–∞ JSON
					if err := json.Unmarshal(msg.Value, &order); err != nil {
						// –ù–µ –ª–æ–≥–∏—Ä—É–µ–º –∫–∞–∂–¥—É—é –æ—à–∏–±–∫—É –ø–∞—Ä—Å–∏–Ω–≥–∞, —á—Ç–æ–±—ã –Ω–µ —Å–ø–∞–º–∏—Ç—å
						continue
					}
				}
				
				// 1. –°–æ—Ö—Ä–∞–Ω—è–µ–º –∑–∞–∫–∞–∑ –≤ Redis (–¥–ª—è –±—ã—Å—Ç—Ä–æ–≥–æ –¥–æ—Å—Ç—É–ø–∞)
				if kc.redisUtil != nil {
					orderJSON, _ := json.Marshal(order)
					orderKey := fmt.Sprintf("erp:order:%s", order.ID)
					err := kc.redisUtil.SetBytes(orderKey, orderJSON, 24*time.Hour)
					if err != nil {
						log.Printf("‚ö†Ô∏è –û—à–∏–±–∫–∞ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è –∑–∞–∫–∞–∑–∞ %s –≤ Redis: %v", order.ID, err)
					}
					
					// 2. –ü—Ä–æ–≤–µ—Ä—è–µ–º VisibleAt –ø–µ—Ä–µ–¥ –¥–æ–±–∞–≤–ª–µ–Ω–∏–µ–º –≤ –∞–∫—Ç–∏–≤–Ω—ã–µ
					// –ï—Å–ª–∏ VisibleAt –Ω–µ –∑–∞–ø–æ–ª–Ω–µ–Ω –≤ Kafka —Å–æ–æ–±—â–µ–Ω–∏–∏, –ø—Ä–æ–≤–µ—Ä—è–µ–º Redis (–∑–∞–∫–∞–∑ –º–æ–≥ –±—ã—Ç—å —Å–æ–∑–¥–∞–Ω —Ä–∞–Ω–µ–µ)
					if order.VisibleAt.IsZero() {
						// –ü—Ä–æ–±—É–µ–º –ø–æ–ª—É—á–∏—Ç—å VisibleAt –∏–∑ Redis
						visibleAtKey := fmt.Sprintf("order:visible_at:%s", order.ID)
						if visibleAtStr, err := kc.redisUtil.Get(visibleAtKey); err == nil && visibleAtStr != "" {
							if visibleAt, err := time.Parse(time.RFC3339, visibleAtStr); err == nil {
								order.VisibleAt = visibleAt
							}
						}
						
						// –ï—Å–ª–∏ –≤—Å–µ –µ—â–µ –Ω–µ—Ç VisibleAt, –Ω–æ –µ—Å—Ç—å TargetSlotID, –ø—Ä–æ–±—É–µ–º –ø–æ–ª—É—á–∏—Ç—å –≤—Ä–µ–º—è –Ω–∞—á–∞–ª–∞ —Å–ª–æ—Ç–∞
						if order.VisibleAt.IsZero() && order.TargetSlotID != "" {
							slotStartKey := fmt.Sprintf("order:slot:start:%s", order.ID)
							if slotStartStr, err := kc.redisUtil.Get(slotStartKey); err == nil && slotStartStr != "" {
								if slotStartTime, err := time.Parse(time.RFC3339, slotStartStr); err == nil {
									// –í—ã—á–∏—Å–ª—è–µ–º VisibleAt –∫–∞–∫ –≤—Ä–µ–º—è –Ω–∞—á–∞–ª–∞ —Å–ª–æ—Ç–∞ –º–∏–Ω—É—Å 15 –º–∏–Ω—É—Ç
									order.VisibleAt = slotStartTime.Add(-15 * time.Minute)
									// –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤—ã—á–∏—Å–ª–µ–Ω–Ω–æ–µ VisibleAt
									kc.redisUtil.Set(visibleAtKey, order.VisibleAt.Format(time.RFC3339), 24*time.Hour)
								}
							}
						}
					}
					
					// –ù–ï –¥–æ–±–∞–≤–ª—è–µ–º –∑–∞–∫–∞–∑ –≤ –∞–∫—Ç–∏–≤–Ω—ã–µ —Å—Ä–∞–∑—É - –æ–Ω –ø–æ—è–≤–∏—Ç—Å—è —Ç–æ–ª—å–∫–æ –∫–æ–≥–¥–∞ –Ω–∞—Å—Ç—É–ø–∏—Ç VisibleAt
					if !order.VisibleAt.IsZero() {
						// –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤—Ä–µ–º—è –ø–æ–∫–∞–∑–∞ –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏ (–µ—Å–ª–∏ –µ—â–µ –Ω–µ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–æ)
						visibleAtKey := fmt.Sprintf("order:visible_at:%s", order.ID)
						kc.redisUtil.Set(visibleAtKey, order.VisibleAt.Format(time.RFC3339), 24*time.Hour)
						
						// –ï—Å–ª–∏ –µ—Å—Ç—å TargetSlotStartTime, —Å–æ—Ö—Ä–∞–Ω—è–µ–º –µ–≥–æ —Ç–æ–∂–µ
						if !order.TargetSlotStartTime.IsZero() {
							kc.redisUtil.Set(fmt.Sprintf("order:slot:start:%s", order.ID), order.TargetSlotStartTime.Format(time.RFC3339), 24*time.Hour)
						}
						
						// –ü—Ä–æ–≤–µ—Ä—è–µ–º, –Ω–µ –Ω–∞—Ö–æ–¥–∏—Ç—Å—è –ª–∏ –∑–∞–∫–∞–∑ —É–∂–µ –≤ active (–∑–∞—â–∏—Ç–∞ –æ—Ç –¥—É–±–ª–∏—Ä–æ–≤–∞–Ω–∏—è)
						isActive, _ := kc.redisUtil.SIsMember("erp:orders:active", order.ID)
						if isActive {
							// –ó–∞–∫–∞–∑ —É–∂–µ –≤ active - —É–¥–∞–ª—è–µ–º –µ–≥–æ –æ—Ç—Ç—É–¥–∞ –∏ –¥–æ–±–∞–≤–ª—è–µ–º –≤ pending
							kc.redisUtil.SRem("erp:orders:active", order.ID)
							log.Printf("üîÑ –ó–∞–∫–∞–∑ %s –ø–µ—Ä–µ–º–µ—â–µ–Ω –∏–∑ active –≤ pending_slots (–±—É–¥–µ—Ç –ø–æ–∫–∞–∑–∞–Ω: %s UTC)", 
								order.ID, order.VisibleAt.Format("15:04:05"))
						}
						
						// –î–æ–±–∞–≤–ª—è–µ–º –≤ —Å–ø–∏—Å–æ–∫ –æ–∂–∏–¥–∞—é—â–∏—Ö –∑–∞–∫–∞–∑–æ–≤ (–Ω–µ –≤ –∞–∫—Ç–∏–≤–Ω—ã–µ!)
						err = kc.redisUtil.SAdd("erp:orders:pending_slots", order.ID)
						if err != nil {
							log.Printf("‚ö†Ô∏è –û—à–∏–±–∫–∞ –¥–æ–±–∞–≤–ª–µ–Ω–∏—è –∑–∞–∫–∞–∑–∞ %s –≤ pending_slots: %v", order.ID, err)
						} else {
							log.Printf("üìÖ –ó–∞–∫–∞–∑ %s –¥–æ–±–∞–≤–ª–µ–Ω –≤ erp:orders:pending_slots (–±—É–¥–µ—Ç –ø–æ–∫–∞–∑–∞–Ω: %s UTC)", 
								order.ID, order.VisibleAt.Format("15:04:05"))
						}
					} else {
						// –ï—Å–ª–∏ –Ω–µ—Ç VisibleAt, –¥–æ–±–∞–≤–ª—è–µ–º —Å—Ä–∞–∑—É –≤ –∞–∫—Ç–∏–≤–Ω—ã–µ (—Å—Ç–∞—Ä–∞—è –ª–æ–≥–∏–∫–∞ –¥–ª—è –æ–±—Ä–∞—Ç–Ω–æ–π —Å–æ–≤–º–µ—Å—Ç–∏–º–æ—Å—Ç–∏)
						// –ù–æ —Å–Ω–∞—á–∞–ª–∞ –ø—Ä–æ–≤–µ—Ä—è–µ–º, –Ω–µ –Ω–∞—Ö–æ–¥–∏—Ç—Å—è –ª–∏ –∑–∞–∫–∞–∑ —É–∂–µ –≤ pending_slots
						isPending, _ := kc.redisUtil.SIsMember("erp:orders:pending_slots", order.ID)
						if isPending {
							// –ó–∞–∫–∞–∑ —É–∂–µ –≤ pending - –Ω–µ –¥–æ–±–∞–≤–ª—è–µ–º –≤ active
							log.Printf("‚ÑπÔ∏è –ó–∞–∫–∞–∑ %s —É–∂–µ –≤ pending_slots, –ø—Ä–æ–ø—É—Å–∫–∞–µ–º –¥–æ–±–∞–≤–ª–µ–Ω–∏–µ –≤ active", order.ID)
						} else {
							err = kc.redisUtil.SAdd("erp:orders:active", order.ID)
							if err != nil {
								log.Printf("‚ö†Ô∏è –û—à–∏–±–∫–∞ –¥–æ–±–∞–≤–ª–µ–Ω–∏—è –∑–∞–∫–∞–∑–∞ %s –≤ –∞–∫—Ç–∏–≤–Ω—ã–µ: %v", order.ID, err)
							} else {
								log.Printf("‚úÖ –ó–∞–∫–∞–∑ %s –¥–æ–±–∞–≤–ª–µ–Ω –≤ erp:orders:active", order.ID)
							}
						}
					}
					
					// 3. –ò–Ω–∫—Ä–µ–º–µ–Ω—Ç —Å—á–µ—Ç—á–∏–∫–æ–≤ –¥–ª—è —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏
					kc.redisUtil.Increment("erp:orders:total")
					kc.redisUtil.Increment("erp:orders:pending")
					
					// –ù–ï –¥–æ–±–∞–≤–ª—è–µ–º –≤ –æ—á–µ—Ä–µ–¥—å –≤–æ—Ä–∫–µ—Ä–æ–≤ - –æ–±—Ä–∞–±–æ—Ç–∫–∞ —Ç–æ–ª—å–∫–æ –≤—Ä—É—á–Ω—É—é —á–µ—Ä–µ–∑ ERP
				}
				
				// 4. –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –∑–∞–∫–∞–∑ –≤ WebSocket
				// –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –Ω–∞ –ø–ª–∞–Ω—à–µ—Ç—ã –ø–æ–≤–∞—Ä–æ–≤
				orderJSON, err := json.Marshal(order)
				if err != nil {
					continue
				}
				GlobalHub.BroadcastMessage(orderJSON)
				
				// –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –≤ ERP —Å–∏—Å—Ç–µ–º—É –¥–ª—è real-time –æ–±–Ω–æ–≤–ª–µ–Ω–∏–π
				BroadcastERPUpdate("new_order", map[string]interface{}{
					"order_id": order.ID,
					"display_id": order.DisplayID,
					"message": "–ù–æ–≤—ã–π –∑–∞–∫–∞–∑ –ø–æ–ª—É—á–µ–Ω",
				})
				
				// –õ–æ–≥–∏—Ä—É–µ–º —Ç–æ–ª—å–∫–æ —Ä–∞–∑ –≤ 5 —Å–µ–∫—É–Ω–¥ –¥–ª—è –ø—Ä–æ–≥—Ä–µ—Å—Å–∞
				processed := atomic.AddInt64(&kc.processed, 1)
				now := time.Now().Unix()
				if now-kc.lastLog >= 5 {
					atomic.StoreInt64(&kc.lastLog, now)
					log.Printf("üìä Kafka WS Consumer: –æ–±—Ä–∞–±–æ—Ç–∞–Ω–æ %d –∑–∞–∫–∞–∑–æ–≤", processed)
				}
			}
		}
	}()
}

// Stop –æ—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ—Ç Kafka Consumer
func (kc *KafkaWSConsumer) Stop() {
	kc.cancel()
	if kc.reader != nil {
		kc.reader.Close()
	}
	log.Println("üõë Kafka WS Consumer –æ—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω")
}

