package api

import (
	"encoding/json"
	"fmt"
	"log"
	"sync"
	"sync/atomic"
	"time"

	"github.com/redis/go-redis/v9"
	"google.golang.org/protobuf/proto"
	"zephyrvpn/server/internal/models"
	"zephyrvpn/server/internal/pb"
	"zephyrvpn/server/internal/utils"
)

// KitchenWorkerPool —É–ø—Ä–∞–≤–ª—è–µ—Ç –≤–æ—Ä–∫–µ—Ä–∞–º–∏-–ø–æ–≤–∞—Ä–∞–º–∏
type KitchenWorkerPool struct {
	redisUtil    *utils.RedisClient
	workers      map[int]*Worker
	workerID     int64
	mu           sync.RWMutex
	queueName    string
	activeCount  int64
	totalCooked  int64
	stopChan     chan struct{}
}

// Worker –ø—Ä–µ–¥—Å—Ç–∞–≤–ª—è–µ—Ç –æ–¥–Ω–æ–≥–æ –≤–æ—Ä–∫–µ—Ä–∞-–ø–æ–≤–∞—Ä–∞
type Worker struct {
	ID         int
	IsActive   bool
	CurrentOrder *models.PizzaOrder
	CookedCount int64
	stopChan   chan struct{}
}

// NewKitchenWorkerPool —Å–æ–∑–¥–∞–µ—Ç –Ω–æ–≤—ã–π –ø—É–ª –≤–æ—Ä–∫–µ—Ä–æ–≤
func NewKitchenWorkerPool(redisUtil *utils.RedisClient) *KitchenWorkerPool {
	return &KitchenWorkerPool{
		redisUtil: redisUtil,
		workers:   make(map[int]*Worker),
		queueName: "erp:orders:list",
		stopChan:  make(chan struct{}),
	}
}

// StartWorker –∑–∞–ø—É—Å–∫–∞–µ—Ç –æ–¥–Ω–æ–≥–æ –≤–æ—Ä–∫–µ—Ä–∞-–ø–æ–≤–∞—Ä–∞ (–ø—É–±–ª–∏—á–Ω—ã–π –º–µ—Ç–æ–¥ —Å –±–ª–æ–∫–∏—Ä–æ–≤–∫–æ–π)
func (kwp *KitchenWorkerPool) StartWorker() int {
	kwp.mu.Lock()
	defer kwp.mu.Unlock()
	return kwp.startWorkerUnlocked()
}

// startWorkerUnlocked –≤–Ω—É—Ç—Ä–µ–Ω–Ω–∏–π –º–µ—Ç–æ–¥ –±–µ–∑ –±–ª–æ–∫–∏—Ä–æ–≤–∫–∏ –º—å—é—Ç–µ–∫—Å–∞
func (kwp *KitchenWorkerPool) startWorkerUnlocked() int {
	id := int(atomic.AddInt64(&kwp.workerID, 1))
	worker := &Worker{
		ID:       id,
		IsActive: true,
		stopChan: make(chan struct{}),
	}
	kwp.workers[id] = worker

	// –ó–∞–ø—É—Å–∫–∞–µ–º –≥–æ—Ä—É—Ç–∏–Ω—É –≤–æ—Ä–∫–µ—Ä–∞
	go kwp.workerLoop(worker)

	atomic.AddInt64(&kwp.activeCount, 1)
	log.Printf("üë®‚Äçüç≥ –ü–æ–≤–∞—Ä #%d –Ω–∞—á–∞–ª —Ä–∞–±–æ—Ç—É", id)
	return id
}

// StopWorker –æ—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ—Ç –≤–æ—Ä–∫–µ—Ä–∞ –ø–æ ID (–ø—É–±–ª–∏—á–Ω—ã–π –º–µ—Ç–æ–¥ —Å –±–ª–æ–∫–∏—Ä–æ–≤–∫–æ–π)
func (kwp *KitchenWorkerPool) StopWorker(workerID int) bool {
	kwp.mu.Lock()
	defer kwp.mu.Unlock()
	return kwp.stopWorkerUnlocked(workerID)
}

// stopWorkerUnlocked –≤–Ω—É—Ç—Ä–µ–Ω–Ω–∏–π –º–µ—Ç–æ–¥ –±–µ–∑ –±–ª–æ–∫–∏—Ä–æ–≤–∫–∏ –º—å—é—Ç–µ–∫—Å–∞
func (kwp *KitchenWorkerPool) stopWorkerUnlocked(workerID int) bool {
	worker, exists := kwp.workers[workerID]
	if !exists || !worker.IsActive {
		return false
	}

	close(worker.stopChan)
	worker.IsActive = false
	delete(kwp.workers, workerID)
	atomic.AddInt64(&kwp.activeCount, -1)
	log.Printf("üë®‚Äçüç≥ –ü–æ–≤–∞—Ä #%d –∑–∞–∫–æ–Ω—á–∏–ª —Ä–∞–±–æ—Ç—É", workerID)
	return true
}

// workerLoop –æ—Å–Ω–æ–≤–Ω–æ–π —Ü–∏–∫–ª –≤–æ—Ä–∫–µ—Ä–∞ - –±–ª–æ–∫–∏—Ä—É—é—â–µ–µ –ø–æ–ª—É—á–µ–Ω–∏–µ –∑–∞–∫–∞–∑–æ–≤ —á–µ—Ä–µ–∑ BRPOP
// –û—Å—Ç–∞–Ω–æ–≤–∫–∞ —Ä–µ–∞–ª–∏–∑–æ–≤–∞–Ω–∞ —á–µ—Ä–µ–∑ select –∏ –∫–∞–Ω–∞–ª stopChan
// BRPOP —Å —Ç–∞–π–º–∞—É—Ç–æ–º 2 —Å–µ–∫—É–Ω–¥—ã - –≤–æ—Ä–∫–µ—Ä –ø–µ—Ä–∏–æ–¥–∏—á–µ—Å–∫–∏ "–ø—Ä–æ—Å—ã–ø–∞–µ—Ç—Å—è" –∏ –ø—Ä–æ–≤–µ—Ä—è–µ—Ç stopChan
func (kwp *KitchenWorkerPool) workerLoop(worker *Worker) {
	
	for {
		// –ü—Ä–æ–≤–µ—Ä—è–µ–º stopChan –ø–µ—Ä–µ–¥ –æ–∂–∏–¥–∞–Ω–∏–µ–º –∑–∞–∫–∞–∑–∞
		select {
		case <-worker.stopChan:
			return
		default:
		}

		// BRPOP —Å —Ç–∞–π–º–∞—É—Ç–æ–º 2 —Å–µ–∫—É–Ω–¥—ã - —ç—Ñ—Ñ–µ–∫—Ç–∏–≤–Ω–æ –∂–¥–µ–º –∑–∞–∫–∞–∑—ã –∏ –ø–µ—Ä–∏–æ–¥–∏—á–µ—Å–∫–∏ –ø—Ä–æ–≤–µ—Ä—è–µ–º stopChan
		// –ò—Å–ø–æ–ª—å–∑—É–µ–º –≥–æ—Ä—É—Ç–∏–Ω—É –¥–ª—è –Ω–µ–±–ª–æ–∫–∏—Ä—É—é—â–µ–π –ø—Ä–æ–≤–µ—Ä–∫–∏ stopChan –≤–æ –≤—Ä–µ–º—è BRPOP
		type brpopResult struct {
			orderID string
			err     error
		}
		resultChan := make(chan brpopResult, 1)
		
		go func() {
			// BRPOP –±–ª–æ–∫–∏—Ä—É–µ—Ç –º–∞–∫—Å–∏–º—É–º 2 —Å–µ–∫—É–Ω–¥—ã, –∑–∞—Ç–µ–º –≤–µ—Ä–Ω–µ—Ç—Å—è (—Ç–∞–π–º–∞—É—Ç –∏–ª–∏ –∑–∞–∫–∞–∑)
			orderID, err := kwp.redisUtil.BRPop(kwp.queueName, 2*time.Second)
			resultChan <- brpopResult{orderID: orderID, err: err}
		}()

		// –ñ–¥–µ–º –ª–∏–±–æ —Ä–µ–∑—É–ª—å—Ç–∞—Ç BRPOP, –ª–∏–±–æ —Å–∏–≥–Ω–∞–ª –æ—Å—Ç–∞–Ω–æ–≤–∫–∏
		select {
		case <-worker.stopChan:
			return
		case result := <-resultChan:
			if result.err != nil {
				// –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ç–∏–ø –æ—à–∏–±–∫–∏: —Ç–∞–π–º–∞—É—Ç (redis.Nil) –∏–ª–∏ —Ä–µ–∞–ª—å–Ω–∞—è –æ—à–∏–±–∫–∞
				if result.err == redis.Nil {
					// –¢–∞–π–º–∞—É—Ç - —ç—Ç–æ –Ω–æ—Ä–º–∞–ª—å–Ω–æ, –ø—Ä–æ—Å—Ç–æ –Ω–µ—Ç –∑–∞–∫–∞–∑–æ–≤
					// –ü—Ä–æ–¥–æ–ª–∂–∞–µ–º —Ü–∏–∫–ª, –ø—Ä–æ–≤–µ—Ä–∏–º stopChan –Ω–∞ —Å–ª–µ–¥—É—é—â–µ–π –∏—Ç–µ—Ä–∞—Ü–∏–∏
					continue
				}
				// –†–µ–∞–ª—å–Ω–∞—è –æ—à–∏–±–∫–∞ Redis - –ª–æ–≥–∏—Ä—É–µ–º –∏ –ø—Ä–æ–¥–æ–ª–∂–∞–µ–º
				log.Printf("‚ö†Ô∏è –ü–æ–≤–∞—Ä #%d: –æ—à–∏–±–∫–∞ BRPop –∏–∑ –æ—á–µ—Ä–µ–¥–∏ %s: %v", worker.ID, kwp.queueName, result.err)
				// –ù–µ–±–æ–ª—å—à–∞—è –∑–∞–¥–µ—Ä–∂–∫–∞ –ø–µ—Ä–µ–¥ –ø–æ–≤—Ç–æ—Ä–æ–º, —á—Ç–æ–±—ã –Ω–µ —Å–ø–∞–º–∏—Ç—å –ª–æ–≥–∏
				continue
			}

			orderID := result.orderID

			// –ü–æ–ª—É—á–∞–µ–º –∑–∞–∫–∞–∑ –∏–∑ Redis (–ø–æ–¥–¥–µ—Ä–∂–∫–∞ Protobuf –∏ JSON)
			orderKey := fmt.Sprintf("erp:order:%s", orderID)
			orderBytes, err := kwp.redisUtil.GetBytes(orderKey)
			if err != nil {
				log.Printf("‚ùå –ü–æ–≤–∞—Ä #%d: –Ω–µ —É–¥–∞–ª–æ—Å—å –ø–æ–ª—É—á–∏—Ç—å –∑–∞–∫–∞–∑ %s: %v", worker.ID, orderID, err)
				continue
			}

			var order models.PizzaOrder
			// –ü—Ä–æ–±—É–µ–º —Å–Ω–∞—á–∞–ª–∞ Protobuf (–±—ã—Å—Ç—Ä–µ–µ!)
			pbOrder := &pb.PizzaOrder{}
			if err := proto.Unmarshal(orderBytes, pbOrder); err == nil {
				// –£—Å–ø–µ—à–Ω–æ —Ä–∞—Å–ø–∞—Ä—Å–∏–ª–∏ Protobuf - –∫–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º –≤ models.PizzaOrder
				order = models.PizzaOrder{
					ID:               pbOrder.Id,
					DisplayID:        pbOrder.DisplayId,
					CustomerID:       int(pbOrder.CustomerId),
					CustomerFirstName: pbOrder.CustomerFirstName,
					CustomerLastName:  pbOrder.CustomerLastName,
					CustomerPhone:     pbOrder.CustomerPhone,
					DeliveryAddress:   pbOrder.DeliveryAddress,
					IsPickup:          pbOrder.IsPickup,
					PickupLocationID:  pbOrder.PickupLocationId,
					TotalPrice:        int(pbOrder.TotalPrice),
					CreatedAt:         time.Unix(0, pbOrder.CreatedAt),
					Status:            pbOrder.Status,
					IsSet:             pbOrder.IsSet,
					SetName:           pbOrder.SetName,
				}
				// –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º Items –µ—Å–ª–∏ –µ—Å—Ç—å
				for _, pbItem := range pbOrder.Items {
					item := models.PizzaItem{
						PizzaName:   pbItem.PizzaName,
						Ingredients: pbItem.Ingredients,
						Extras:      pbItem.Extras,
						Quantity:    int(pbItem.Quantity),
						Price:       int(pbItem.Price),
					}
					// –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º –¥–æ–∑–∏—Ä–æ–≤–∫–∏ –∏–∑ protobuf (map[string]int32 -> map[string]int)
					if pbItem.IngredientAmounts != nil && len(pbItem.IngredientAmounts) > 0 {
						item.IngredientAmounts = make(map[string]int)
						for k, v := range pbItem.IngredientAmounts {
							item.IngredientAmounts[k] = int(v)
						}
					} else {
						// –ï—Å–ª–∏ –¥–æ–∑–∏—Ä–æ–≤–æ–∫ –Ω–µ—Ç –≤ protobuf, –±–µ—Ä–µ–º –∏–∑ –º–æ–¥–µ–ª–∏ –ø–∏—Ü—Ü—ã
						if pizza, exists := models.GetPizza(pbItem.PizzaName); exists && pizza.IngredientAmounts != nil {
							item.IngredientAmounts = pizza.IngredientAmounts
						}
					}
					order.Items = append(order.Items, item)
				}
			} else {
				// Fallback –Ω–∞ JSON –¥–ª—è –æ–±—Ä–∞—Ç–Ω–æ–π —Å–æ–≤–º–µ—Å—Ç–∏–º–æ—Å—Ç–∏
				if err := json.Unmarshal(orderBytes, &order); err != nil {
					log.Printf("‚ùå –ü–æ–≤–∞—Ä #%d: –æ—à–∏–±–∫–∞ –ø–∞—Ä—Å–∏–Ω–≥–∞ –∑–∞–∫–∞–∑–∞ %s (–Ω–∏ Protobuf, –Ω–∏ JSON): %v", worker.ID, orderID, err)
					continue
				}
			}

			// –ü—Ä–æ–≤–µ—Ä—è–µ–º stopChan –ø–µ—Ä–µ–¥ –Ω–∞—á–∞–ª–æ–º –≥–æ—Ç–æ–≤–∫–∏
			select {
			case <-worker.stopChan:
				log.Printf("üõë –ü–æ–≤–∞—Ä #%d –ø–æ–ª—É—á–∏–ª —Å–∏–≥–Ω–∞–ª –æ—Å—Ç–∞–Ω–æ–≤–∫–∏ –ø–µ—Ä–µ–¥ –≥–æ—Ç–æ–≤–∫–æ–π –∑–∞–∫–∞–∑–∞ %s", worker.ID, orderID)
				// –í–æ–∑–≤—Ä–∞—â–∞–µ–º –∑–∞–∫–∞–∑ –≤ –æ—á–µ—Ä–µ–¥—å
				kwp.redisUtil.LPush(kwp.queueName, orderID)
				return
			default:
			}

			// –û–±–Ω–æ–≤–ª—è–µ–º —Å—Ç–∞—Ç—É—Å –∑–∞–∫–∞–∑–∞
			worker.CurrentOrder = &order
			order.Status = "preparing"
			kwp.updateOrderStatus(&order)
			
			// –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –∑–∞–∫–∞–∑ –Ω–∞ –ø–ª–∞–Ω—à–µ—Ç—ã –ø–æ–≤–∞—Ä–æ–≤ —á–µ—Ä–µ–∑ WebSocket
			orderJSON, _ := json.Marshal(order)
			GlobalHub.BroadcastMessage(orderJSON)


			// "–ì–æ—Ç–æ–≤–∏–º" –ø–∏—Ü—Ü—É (—Å–∏–º—É–ª—è—Ü–∏—è –≤—Ä–µ–º–µ–Ω–∏ –≥–æ—Ç–æ–≤–∫–∏)
			// –í–æ –≤—Ä–µ–º—è –≥–æ—Ç–æ–≤–∫–∏ —Ç–∞–∫–∂–µ –ø—Ä–æ–≤–µ—Ä—è–µ–º stopChan –ø–µ—Ä–∏–æ–¥–∏—á–µ—Å–∫–∏
			cookingTime := kwp.calculateCookingTime(&order)
			if !kwp.sleepWithStopCheck(cookingTime, worker.stopChan) {
				// –ü–æ–ª—É—á–µ–Ω —Å–∏–≥–Ω–∞–ª –æ—Å—Ç–∞–Ω–æ–≤–∫–∏ –≤–æ –≤—Ä–µ–º—è –≥–æ—Ç–æ–≤–∫–∏
				log.Printf("üõë –ü–æ–≤–∞—Ä #%d –ø–æ–ª—É—á–∏–ª —Å–∏–≥–Ω–∞–ª –æ—Å—Ç–∞–Ω–æ–≤–∫–∏ –≤–æ –≤—Ä–µ–º—è –≥–æ—Ç–æ–≤–∫–∏ –∑–∞–∫–∞–∑–∞ %s", worker.ID, orderID)
				order.Status = "pending" // –í–æ–∑–≤—Ä–∞—â–∞–µ–º –≤ pending
				kwp.updateOrderStatus(&order)
				// –í–æ–∑–≤—Ä–∞—â–∞–µ–º –∑–∞–∫–∞–∑ –≤ –æ—á–µ—Ä–µ–¥—å
				kwp.redisUtil.LPush(kwp.queueName, orderID)
				worker.CurrentOrder = nil
				return
			}

			// –ó–∞–∫–∞–∑ –≥–æ—Ç–æ–≤
			order.Status = "ready"
			kwp.updateOrderStatus(&order)
			atomic.AddInt64(&worker.CookedCount, 1)
			atomic.AddInt64(&kwp.totalCooked, 1)

			worker.CurrentOrder = nil


		}
	}
}

// sleepWithStopCheck –¥–µ–ª–∞–µ—Ç sleep —Å –ø–µ—Ä–∏–æ–¥–∏—á–µ—Å–∫–æ–π –ø—Ä–æ–≤–µ—Ä–∫–æ–π stopChan
// –†–∞–∑–±–∏–≤–∞–µ—Ç –¥–ª–∏–Ω–Ω—ã–π sleep –Ω–∞ –∫–æ—Ä–æ—Ç–∫–∏–µ –∏–Ω—Ç–µ—Ä–≤–∞–ª—ã (500–º—Å) –¥–ª—è –±—ã—Å—Ç—Ä–æ–π —Ä–µ–∞–∫—Ü–∏–∏ –Ω–∞ –æ—Å—Ç–∞–Ω–æ–≤–∫—É
// –í–æ–∑–≤—Ä–∞—â–∞–µ—Ç false –µ—Å–ª–∏ –ø–æ–ª—É—á–µ–Ω —Å–∏–≥–Ω–∞–ª –æ—Å—Ç–∞–Ω–æ–≤–∫–∏
func (kwp *KitchenWorkerPool) sleepWithStopCheck(duration time.Duration, stopChan chan struct{}) bool {
	checkInterval := 500 * time.Millisecond // –ü—Ä–æ–≤–µ—Ä—è–µ–º –∫–∞–∂–¥—ã–µ 500–º—Å
	elapsed := time.Duration(0)
	
	for elapsed < duration {
		// –°–ø–∏–º –Ω–µ–±–æ–ª—å—à–∏–º–∏ –ø–æ—Ä—Ü–∏—è–º–∏, —á—Ç–æ–±—ã –±—ã—Å—Ç—Ä–æ —Ä–µ–∞–≥–∏—Ä–æ–≤–∞—Ç—å –Ω–∞ stopChan
		sleepTime := checkInterval
		if remaining := duration - elapsed; remaining < sleepTime {
			sleepTime = remaining
		}
		
		select {
		case <-stopChan:
			return false // –ü–æ–ª—É—á–µ–Ω —Å–∏–≥–Ω–∞–ª –æ—Å—Ç–∞–Ω–æ–≤–∫–∏
		case <-time.After(sleepTime):
			elapsed += sleepTime
		}
	}
	return true // –í—Ä–µ–º—è –≤—ã—à–ª–æ, —Å–∏–≥–Ω–∞–ª–∞ –æ—Å—Ç–∞–Ω–æ–≤–∫–∏ –Ω–µ –±—ã–ª–æ
}

// calculateCookingTime –≤—ã—á–∏—Å–ª—è–µ—Ç –≤—Ä–µ–º—è –≥–æ—Ç–æ–≤–∫–∏ –Ω–∞ –æ—Å–Ω–æ–≤–µ –∫–æ–ª–∏—á–µ—Å—Ç–≤–∞ –ø–∏—Ü—Ü
func (kwp *KitchenWorkerPool) calculateCookingTime(order *models.PizzaOrder) time.Duration {
	totalPizzas := 0
	for _, item := range order.Items {
		totalPizzas += item.Quantity
	}
	// –ë–∞–∑–æ–≤–∞—è –≥–æ—Ç–æ–≤–∫–∞: 2 —Å–µ–∫—É–Ω–¥—ã –Ω–∞ –ø–∏—Ü—Ü—É, –º–∏–Ω–∏–º—É–º 3 —Å–µ–∫—É–Ω–¥—ã
	cookingTime := time.Duration(totalPizzas*2) * time.Second
	if cookingTime < 3*time.Second {
		cookingTime = 3 * time.Second
	}
	// –ú–∞–∫—Å–∏–º—É–º 10 —Å–µ–∫—É–Ω–¥ –Ω–∞ –∑–∞–∫–∞–∑
	if cookingTime > 10*time.Second {
		cookingTime = 10 * time.Second
	}
	return cookingTime
}

func (kwp *KitchenWorkerPool) updateOrderStatus(order *models.PizzaOrder) {
	if kwp.redisUtil == nil {
		return
	}
	
	// 1. –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤ –û–ë–ê –∫–ª—é—á–∞ (–¥–ª—è –Ω–∞–¥–µ–∂–Ω–æ—Å—Ç–∏ –∏ –¥–ª—è ERP)
	orderJSON, _ := json.Marshal(order)
	kwp.redisUtil.Set(fmt.Sprintf("order:%s", order.ID), string(orderJSON), 24*time.Hour)
	kwp.redisUtil.Set(fmt.Sprintf("erp:order:%s", order.ID), string(orderJSON), 24*time.Hour)

	// 2. –ï—Å–ª–∏ —Å—Ç–∞—Ç—É—Å —Å—Ç–∞–ª "ready", –æ—Ç–º–µ—á–∞–µ–º –≤ —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–µ ERP –∏ —É–¥–∞–ª—è–µ–º –∏–∑ Redis
	if order.Status == "ready" {
		kwp.redisUtil.SAdd("erp:processed:set", order.ID)
		kwp.redisUtil.Decrement("erp:orders:pending")
		kwp.redisUtil.Increment("erp:orders:processed")
		
		// –£–¥–∞–ª—è–µ–º –∑–∞–∫–∞–∑ –∏–∑ Redis –ø–æ—Å–ª–µ –æ–±—Ä–∞–±–æ—Ç–∫–∏ (–∏—Å—Ç–æ—á–Ω–∏–∫ –∏—Å—Ç–∏–Ω—ã - Kafka)
		kwp.redisUtil.Delete(fmt.Sprintf("erp:order:%s", order.ID))
		kwp.redisUtil.Delete(fmt.Sprintf("order:%s", order.ID))
		kwp.redisUtil.SRem("erp:orders:active", order.ID)
	}
}

// SetWorkerCount —É—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ—Ç –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ –∞–∫—Ç–∏–≤–Ω—ã—Ö –≤–æ—Ä–∫–µ—Ä–æ–≤
func (kwp *KitchenWorkerPool) SetWorkerCount(count int) {
	kwp.mu.Lock()
	defer kwp.mu.Unlock()

	currentCount := len(kwp.workers)

	if count > currentCount {
		// –î–æ–±–∞–≤–ª—è–µ–º –≤–æ—Ä–∫–µ—Ä–æ–≤ (–∏—Å–ø–æ–ª—å–∑—É–µ–º –≤–Ω—É—Ç—Ä–µ–Ω–Ω–∏–π –º–µ—Ç–æ–¥ –±–µ–∑ –±–ª–æ–∫–∏—Ä–æ–≤–∫–∏)
		for i := 0; i < count-currentCount; i++ {
			kwp.startWorkerUnlocked()
		}
	} else if count < currentCount {
		// –£–¥–∞–ª—è–µ–º –≤–æ—Ä–∫–µ—Ä–æ–≤ (–æ—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –ø–æ—Å–ª–µ–¥–Ω–∏—Ö, –∏—Å–ø–æ–ª—å–∑—É–µ–º –≤–Ω—É—Ç—Ä–µ–Ω–Ω–∏–π –º–µ—Ç–æ–¥)
		stopped := 0
		for id := range kwp.workers {
			if stopped >= currentCount-count {
				break
			}
			if kwp.stopWorkerUnlocked(id) {
				stopped++
			}
		}
	}
}

// GetStats –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É –≤–æ—Ä–∫–µ—Ä–æ–≤
func (kwp *KitchenWorkerPool) GetStats() map[string]interface{} {
	kwp.mu.RLock()
	defer kwp.mu.RUnlock()

	workersInfo := make([]map[string]interface{}, 0)
	for _, worker := range kwp.workers {
		var currentOrderID string
		if worker.CurrentOrder != nil {
			currentOrderID = worker.CurrentOrder.ID
		}
		workersInfo = append(workersInfo, map[string]interface{}{
			"id":           worker.ID,
			"is_active":    worker.IsActive,
			"current_order": currentOrderID,
			"cooked_count": atomic.LoadInt64(&worker.CookedCount),
		})
	}

	queueLength := int64(0)
	if kwp.redisUtil != nil {
		queueLength, _ = kwp.redisUtil.LLen(kwp.queueName)
	}

	return map[string]interface{}{
		"active_workers": atomic.LoadInt64(&kwp.activeCount),
		"total_cooked":   atomic.LoadInt64(&kwp.totalCooked),
		"queue_length":   queueLength,
		"workers":        workersInfo,
	}
}

// StopAll –æ—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ—Ç –≤—Å–µ—Ö –≤–æ—Ä–∫–µ—Ä–æ–≤
func (kwp *KitchenWorkerPool) StopAll() {
	kwp.mu.Lock()
	defer kwp.mu.Unlock()

	for id := range kwp.workers {
		kwp.stopWorkerUnlocked(id)
	}
}

